Document optimization (Blender & Introduction)
Replaced YouTube url to Bilibili url.
Optimized HTML character entities.

Co-Authored-By: FunJoyTech <40247354+FunJoyTech@users.noreply.github.com>
Co-Authored-By: fastestshishen <47713021+fastestshishen@users.noreply.github.com>

--- a/manual/zh/blender/Animation.html
+++ b/manual/zh/blender/Animation.html
@@ -23,11 +23,17 @@
 
     <h3>全对象动画</h3>
 
-    <p>动画关键帧可以添加在Blender中以标准方式添加，使用菜单 对象 &gt; 动画 &gt; 插入关键帧...（或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放对象到一个新位置，并为此位置添加一个新的动画关键帧。</p><img src="files/animation-blender/insert-keyframe.jpg" alt="在Verge3D for Blender中插入关键帧" class="centered" style="max-width: 1000px"><p>另请参阅如下教程（[link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=7 Bilibili地址]）：</p><iframe class="video-480p" src="https://www.youtube.com/embed/VkjEfSmI2xM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> [anchor:Skeletal_Animation]
+    <p>动画关键帧可以添加在Blender中以标准方式添加，使用菜单 对象 > 动画 > 插入关键帧...（或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放对象到一个新位置，并为此位置添加一个新的动画关键帧。</p><img src="files/animation-blender/insert-keyframe.jpg" alt="在Verge3D for Blender中插入关键帧" class="centered" style="max-width: 1000px">
+    
+    <p>另请参阅如下教程：</p>
+	
+	<iframe class="video-480p" src="https://player.bilibili.com/player.html?aid=925684140&bvid=BV1WT4y1u7pT&cid=195554276&page=7&high_quality=1&danmaku=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+	
+	[anchor:Skeletal_Animation]
 
     <h3>骨骼动画</h3>
 
-    <p>可以在Blender中使用 <a href="https://docs.blender.org/manual/zh-hans/latest/animation/armatures/index.html" target="_blank">骨架</a> 对象。Verge3D支持每个骨骼最大4个权重（将自动选择4个影响最大的权重，其他的忽略）。骨架的骨骼可以在 <b>姿态模式(Pose Mode)</b>（快捷键Ctrl-Tab）下设置动画，使用菜单 姿态 &gt; 动画 &gt; 插入关键帧 ... （或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放骨骼到一个新位置，并为这个位置添加一个新的动画关键帧。</p><img src="files/animation-blender/skeletal-animation.jpg" alt="在Verge3D for Blender中为骨骼动画插入关键帧" class="centered" style="max-width: 1000px">
+    <p>可以在Blender中使用 <a href="https://docs.blender.org/manual/zh-hans/latest/animation/armatures/index.html" target="_blank">骨架</a> 对象。Verge3D支持每个骨骼最大4个权重（将自动选择4个影响最大的权重，其他的忽略）。骨架的骨骼可以在 <b>姿态模式(Pose Mode)</b>（快捷键Ctrl-Tab）下设置动画，使用菜单 姿态 > 动画 > 插入关键帧 ... （或使用快捷方式*i*)，选择时间线上的另一帧，移动/旋转/缩放骨骼到一个新位置，并为这个位置添加一个新的动画关键帧。</p><img src="files/animation-blender/skeletal-animation.jpg" alt="在Verge3D for Blender中为骨骼动画插入关键帧" class="centered" style="max-width: 1000px">
 
     [anchor:Shape_Key_Animation]
 
@@ -76,7 +82,7 @@
 
     <h3>帧速率</h3>
 
-    <p>影响播放速度的帧率值（默认为24 fps）可以在 &quot;输出属性 &quot;选项卡中改变。</p><img src="files/animation-blender/frame-rate.jpg" alt="用于Blender的Verge3D帧速率选择器" class="centered" style="max-width: 389px">
+    <p>影响播放速度的帧率值（默认为24 fps）可以在 “输出属性” 选项卡中改变。</p><img src="files/animation-blender/frame-rate.jpg" alt="用于Blender的Verge3D帧速率选择器" class="centered" style="max-width: 389px">
 
     [anchor:Animation_Control_with_Puzzles]
 
