--- a/manual/zh/blender/Camera.html
+++ b/manual/zh/blender/Camera.html
@@ -69,7 +69,7 @@
 
     <p>*Collision Material* - 碰撞材质，是用于与摄影机产生碰撞的材质。</p>
 
-    <p>*Gaze Level* - 注视水平，第一人称摄像机的&ldquo;注视&rdquo;（或&ldquo;头部&rdquo;/&ldquo;眼睛&rdquo;）水平。</p>
+    <p>*Gaze Level* - 注视水平，第一人称摄像机的“注视”（或“头部” / “眼睛”）水平。</p>
 
     <p>*Story Height* - 楼层高度。</p>
 
