--- a/manual/zh/blender/Installation.html
+++ b/manual/zh/blender/Installation.html
@@ -27,9 +27,9 @@
 
     <h2>在Windows中安装</h2>
 
-    <p>双击 <strong>.exe</strong> 文件以运行安装程序。</p><img src="files/installation-blender/windows-installer.jpg" class="centered" style="max-width: 501px"><p>选择一个有足够读写权限的安装目录（建议使用默认路径）。不建议在&ldquo;Program Files&rdquo;或&ldquo;Desktop&rdquo;等系统目录中安装。</p><img src="files/installation-blender/windows-installer2.jpg" class="centered" style="max-width: 501px"><p>安装完成后即可打开Blender。如果Maya正在运行，请先关闭然后再次打开。</p>
+    <p>双击 <strong>.exe</strong> 文件以运行安装程序。</p><img src="files/installation-blender/windows-installer.jpg" class="centered" style="max-width: 501px"><p>选择一个有足够读写权限的安装目录（建议使用默认路径）。不建议在“Program Files”或“Desktop”等系统目录中安装。</p><img src="files/installation-blender/windows-installer2.jpg" class="centered" style="max-width: 501px"><p>安装完成后即可打开Blender。如果Blender正在运行，请先关闭然后再次打开。</p>
 
-    <p>打开&ldquo;<b>偏好设置</b>&rdquo;窗口并转到&ldquo;<b>插件</b>&rdquo;选项卡。找到并启用Verge3D插件，然后单击&ldquo;<b>保存用户设置</b>&rdquo;并关闭窗口。</p><img src="files/installation-blender/installation_blender280_step3.jpg" class="centered" style="max-width: 660px"><p>从2.17版本开始，您也可以通过桌面或开始菜单中的Verge3D快捷方式图标来打开应用管理器，这种启动方式无需启动Blender。</p><img src="files/installation-blender/desktop-shortcuts.jpg" class="centered" style="max-width: 1000px">
+    <p>打开“<b>偏好设置</b>”窗口并转到“<b>插件</b>”选项卡。找到并启用Verge3D插件，然后单击“<b>保存用户设置</b>”并关闭窗口。</p><img src="files/installation-blender/installation_blender280_step3.jpg" class="centered" style="max-width: 660px"><p>从2.17版本开始，您也可以通过桌面或开始菜单中的Verge3D快捷方式图标来打开应用管理器，这种启动方式无需启动Blender。</p><img src="files/installation-blender/desktop-shortcuts.jpg" class="centered" style="max-width: 1000px">
 
     [anchor:Installation_for_macOS_or_Linux]
 
@@ -37,7 +37,7 @@
 
     <p>将XZ压缩包解压到您选择的目录中。请确保您有足够的权限在此文件夹中进行读/写操作。不建议在系统目录中安装。</p>
 
-    <p>在Blender中，打开<b>编辑</b>菜单中的<b>偏好设置</b>窗口。</p><img src="files/installation-blender/installation_blender280_step1.jpg" class="centered" style="max-width: 1000px"><p>在<b>文件路径</b>选项卡中，找到<b>脚本</b>字段，并将其路径指向您安装Verge3D的文件夹。关闭&ldquo;<b>偏好设置</b>&rdquo;窗口并 <i>重启Blender</i>.</p><img src="files/installation-blender/installation_blender280_step2.jpg" class="centered" style="max-width: 660px"><p>再次打开&ldquo;<b>偏好设置</b>&rdquo;窗口并转到&ldquo;<b>插件</b>&rdquo;选项卡。找到并启用Verge3D插件，单击&ldquo;保存用户设置&rdquo;后关闭窗口。</p><img src="files/installation-blender/installation_blender280_step3.jpg" class="centered" style="max-width: 660px"><p>安装完成！</p>
+    <p>在Blender中，打开<b>编辑</b>菜单中的<b>偏好设置</b>窗口。</p><img src="files/installation-blender/installation_blender280_step1.jpg" class="centered" style="max-width: 1000px"><p>在<b>文件路径</b>选项卡中，找到<b>脚本</b>字段，并将其路径指向您安装Verge3D的文件夹。关闭“<b>偏好设置</b>”窗口并 <i>重启Blender</i>.</p><img src="files/installation-blender/installation_blender280_step2.jpg" class="centered" style="max-width: 660px"><p>再次打开“<b>偏好设置</b>”窗口并转到“<b>插件</b>”选项卡。找到并启用Verge3D插件，单击“保存用户设置”后关闭窗口。</p><img src="files/installation-blender/installation_blender280_step3.jpg" class="centered" style="max-width: 660px"><p>安装完成！</p>
 
     <h2>向前一步</h2>
 
