--- a/manual/zh/blender/Lighting-and-Rendering.html
+++ b/manual/zh/blender/Lighting-and-Rendering.html
@@ -24,7 +24,13 @@
 
     <h2>环境照明</h2>
 
-    <p>环境照明是Verge3D图形流水线的一个非常重要的组成部分。您可以只用环境贴图来照亮整个场景，而不使用任何灯光对象。请参阅 <a href="https://www.soft8soft.com/gallery/scooter-3d-product-customizer/" target="_blank">电动车定制器演示</a> 作为示例：</p><iframe class="video-480p" src="https://www.youtube.com/embed/symQy5gEHdY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><p>默认的立方体模板为基于图像的照明提供了一个HDR纹理。您可以用自己的文件替换这个纹理，或者从头开始设置环境照明。这里是基本的 <em>世界节点</em> 设置，它在环境照明和背景上都使用了相同的纹理。</p><img src="files/lighting-blender/world-nodes.jpg" class="centered" style="max-width: 852px"><p class="note">当使用HDR纹理时，确保将<b>色彩空间</b>设置为<b>线性</b>。</p>
+    <p>环境照明是Verge3D图形流水线的一个非常重要的组成部分。您可以只用环境贴图来照亮整个场景，而不使用任何灯光对象。请参阅 <a href="https://www.soft8soft.com/gallery/scooter-3d-product-customizer/" target="_blank">电动车定制器演示</a> 作为示例：</p>
+    
+    <iframe class="video-480p" src="https://player.bilibili.com/player.html?aid=925684140&bvid=BV1WT4y1u7pT&cid=192624099&page=3&high_quality=1&danmaku=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    <p>默认的立方体模板为基于图像的照明提供了一个HDR纹理。您可以用自己的文件替换这个纹理，或者从头开始设置环境照明。这里是基本的 <em>世界节点</em> 设置，它在环境照明和背景上都使用了相同的纹理。</p><img src="files/lighting-blender/world-nodes.jpg" class="centered" style="max-width: 852px"><p class="note">当使用HDR纹理时，确保将<b>色彩空间</b>设置为<b>线性</b>。</p>
+
+
 
     [anchor:lights]
 
@@ -35,10 +41,10 @@
     <p>Verge3D支持以下灯光类型：</p>
 
     <ul>
-      <li>*Point Lights* &mdash; <b>点光源</b>，Verge3D支持<b>颜色(Color)</b>和<b>功率(Power)</b>属性。</li>
-      <li>*Sun Lights* &mdash; <b>太阳光</b>，Verge3D中支持<b>颜色(Color)</b>和<b>强度(Strength)</b>属性。</li>
-      <li>*Spot Lights* &mdash; <b>聚光灯</b>，<b>颜色(Color)、功率(Power)</b>、<b>聚光灯形状(Spot Shape)</b>：Verge3D中支持<b>尺寸(Size)</b>和<b><b><b><b>混合</b>(Blend)</b></b></b>属性。</li>
-      <li>*Area Lights* &mdash; <b>面光</b>，Verge3D支持的属性包括<b>颜色(Color)</b>，<b>功率(Power)</b>，&ldquo;<b>方形(Square-Shaped)</b>&rdquo;中的<b>尺寸(Size)</b>，以及&ldquo;<b>长方形 (<b>Rectangular</b>-shaped)&ldquo;</b>中的<b>X/Y尺寸(<b>Size X</b>/<b>Size Y</b>)</b>。不支持<b>碟形(Disk)</b>和<b>椭圆形(Ellipse)</b>形状属性。</li>
+      <li>*Point Lights* — <b>点光源</b>，Verge3D支持<b>颜色(Color)</b>和<b>功率(Power)</b>属性。</li>
+      <li>*Sun Lights* — <b>太阳光</b>，Verge3D中支持<b>颜色(Color)</b>和<b>强度(Strength)</b>属性。</li>
+      <li>*Spot Lights* — <b>聚光灯</b>，<b>颜色(Color)、功率(Power)</b>、<b>聚光灯形状(Spot Shape)</b>：Verge3D中支持<b>尺寸(Size)</b>和<b><b><b><b>混合</b>(Blend)</b></b></b>属性。</li>
+      <li>*Area Lights* — <b>面光</b>，Verge3D支持的属性包括<b>颜色(Color)</b>，<b>功率(Power)</b>，“<b>方形(Square-Shaped)</b>”中的<b>尺寸(Size)</b>，以及“<b>长方形 (<b>Rectangular</b>-shaped)”</b>中的<b>X/Y尺寸(<b>Size X</b>/<b>Size Y</b>)</b>。不支持<b>碟形(Disk)</b>和<b>椭圆形(Ellipse)</b>形状属性。</li>
     </ul>
 
     <p>此外，您还可以为点光源、太阳光和聚光灯指定阴影属性。请参阅 <a href="manual/zh/blender/Shadows.html">对应章节</a> 的更多信息。</p>
@@ -204,21 +210,21 @@
 
     <p class="note">轮廓渲染在AR/VR进程中不起作用。可使用其他方法来突出对象物体，如动画或改变材质的颜色。</p><img src="files/lighting-blender/outline-example.jpg" class="centered" style="max-width: 819px"><p>可以使用以下属性来调整轮廓：</p>
 
-    <p>*Enabled* &mdash;  启用/禁用效果。</p>
+    <p>*Enabled* —  启用/禁用效果。</p>
 
-    <p>*Edge Strength* &mdash;  轮廓强度系数。</p>
+    <p>*Edge Strength* —  轮廓强度系数。</p>
 
-    <p>*Edge Glow*  &mdash; 额外发光的强度（渲染在在主轮廓边缘之外）。</p>
+    <p>*Edge Glow*  — 额外发光的强度（渲染在在主轮廓边缘之外）。</p>
 
-    <p>*Edge Thickness* &mdash; 轮廓边缘厚度系数。</p>
+    <p>*Edge Thickness* — 轮廓边缘厚度系数。</p>
 
-    <p>*Pulse Period* &mdash; 以秒为单位的脉冲周期。指定以下参数，使效果动画化。</p>
+    <p>*Pulse Period* — 以秒为单位的脉冲周期。指定以下参数，使效果动画化。</p>
 
-    <p>*Visible Edge Color* &mdash; <b>可见边颜色</b>。</p>
+    <p>*Visible Edge Color* — <b>可见边颜色</b>。</p>
 
-    <p>*Hidden Edge Color* &mdash; <b>隐藏边颜色</b>，在任何其他场景对象后面的被渲染的轮廓边的颜色。</p>
+    <p>*Hidden Edge Color* — <b>隐藏边颜色</b>，在任何其他场景对象后面的被渲染的轮廓边的颜色。</p>
 
-    <p>*Render Hidden Edge* &mdash; <b>渲染隐藏边</b>，启用/禁用渲染其他场景对象后面的轮廓边。</p>
+    <p>*Render Hidden Edge* — <b>渲染隐藏边</b>，启用/禁用渲染其他场景对象后面的轮廓边。</p>
 
     <p class="note">尽管有可能渲染发光的物体，但在大多数情况下可以用轮廓渲染来提高场景的视觉清晰度。如果您需要从灯或其他明亮的物体上发光，可以考虑使用 <a href="manual/zh/puzzles/Postprocessing.html#bloom">辉光后期处理</a> 来代替。</p>
 
@@ -226,17 +232,17 @@
 
     <h2>每个对象的渲染属性</h2>
 
-    <p>Verge3D为您的几何对象支持以下额外的渲染属性：</p><img src="files/lighting-blender/rendering-properties.jpg" class="centered" style="max-width: 313px"><p>*Rendering Order* &mdash; <b>渲染顺序</b>，修改特定对象的渲染顺序。索引越小，对象就越早被渲染。在大多数情况下，当使用混合透明度时，您需要调整这个值，以消除透明度的伪影。</p>
+    <p>Verge3D为您的几何对象支持以下额外的渲染属性：</p><img src="files/lighting-blender/rendering-properties.jpg" class="centered" style="max-width: 313px"><p>*Rendering Order* — <b>渲染顺序</b>，修改特定对象的渲染顺序。索引越小，对象就越早被渲染。在大多数情况下，当使用混合透明度时，您需要调整这个值，以消除透明度的伪影。</p>
 
-    <p>*Frustum Culling* &mdash; <b>锥台剔除</b>，启用/禁用对象的锥台剔除优化。如果您有一些可以移动到屏幕空间之外的蒙皮对象，请取消勾选这个选项，以防止它被剔除。</p>
+    <p>*Frustum Culling* — <b>锥台剔除</b>，启用/禁用对象的锥台剔除优化。如果您有一些可以移动到屏幕空间之外的蒙皮对象，请取消勾选这个选项，以防止它被剔除。</p>
 
-    <p>*Receive Shadows* &mdash; <b>接收阴影</b>，渲染或不渲染给定对象的阴影。参见 <a href="manual/zh/blender/Shadows.html">这里</a> 的更多信息。</p>
+    <p>*Receive Shadows* — <b>接收阴影</b>，渲染或不渲染给定对象的阴影。参见 <a href="manual/zh/blender/Shadows.html">这里</a> 的更多信息。</p>
 
     [anchor:clipping_planes]
 
     <h2>剪切平面</h2>
 
-    <p>剪切平面（又称剖面图、横截面图、网格截面）是一种用于显示复杂对象（如建筑物、汽车、电器、小玩意、机器等）内部结构的技术。</p><img src="files/lighting-blender/clipping-plane-example.jpg" class="centered"><p>若要添加新的剪切平面，请使用Blender的&ldquo;添加对象&rdquo;菜单中的&ldquo;Clipping Planes(剪切平面)&rdquo;菜单项：</p><img src="files/lighting-blender/clipping-plane-new.jpg" class="centered"><p>场景中的对象将在剪切平面对象的 *-Z* 方向被剪切。</p>
+    <p>剪切平面（又称剖面图、横截面图、网格截面）是一种用于显示复杂对象（如建筑物、汽车、电器、小玩意、机器等）内部结构的技术。</p><img src="files/lighting-blender/clipping-plane-example.jpg" class="centered"><p>若要添加新的剪切平面，请使用Blender的“添加对象”菜单中的“Clipping Planes(剪切平面)”菜单项：</p><img src="files/lighting-blender/clipping-plane-new.jpg" class="centered"><p>场景中的对象将在剪切平面对象的 *-Z* 方向被剪切。</p>
 
     <p>剪切平面具有以下属性：</p><img src="files/lighting-blender/clipping-plane-properties.jpg" class="centered" style="max-width: 382px"><dl>
       <dt>Affected Objects</dt>
