--- a/manual/zh/blender/Material-Library.html
+++ b/manual/zh/blender/Material-Library.html
@@ -32,7 +32,7 @@
 
     <h2>向项目添加材质</h2>
 
-    <p>要在项目中使用这些材质，请打开<b>文件/附加(File/Appen<b>d</b>)</b>对话框。</p><img src="files/mat-library-blender/append-material.jpg" class="centered" style="max-width: 835px"><p>然后导航到材质库文件夹，点击打开带有要添加的材质的*blend*文件。</p><img src="files/mat-library-blender/append-material2.jpg" class="centered" style="max-width: 835px"><p>打开&ldquo;Material&rdquo;文件夹...</p><img src="files/mat-library-blender/append-material3.jpg" class="centered" style="max-width: 835px"><p>...选择材质，然后单击&ldquo;追加&rdquo;按钮。</p><img src="files/mat-library-blender/append-material4.jpg" class="centered" style="max-width: 1000px"><p>材质被追加后，您即可将其指定给模型了。选择一个模型，转到 *材质属性* 选项卡，点击材质名称附近的小按钮（若还没有分配材质，则点击 *新建* 按钮），然后从列表中选择刚才附加的材质。</p><img src="files/mat-library-blender/assign-material.jpg" class="centered" style="max-width: 835px">
+    <p>要在项目中使用这些材质，请打开<b>文件/附加(File/Appen<b>d</b>)</b>对话框。</p><img src="files/mat-library-blender/append-material.jpg" class="centered" style="max-width: 835px"><p>然后导航到材质库文件夹，点击打开带有要添加的材质的*blend*文件。</p><img src="files/mat-library-blender/append-material2.jpg" class="centered" style="max-width: 835px"><p>打开“Material”文件夹...</p><img src="files/mat-library-blender/append-material3.jpg" class="centered" style="max-width: 835px"><p>...选择材质，然后单击“追加”按钮。</p><img src="files/mat-library-blender/append-material4.jpg" class="centered" style="max-width: 1000px"><p>材质被追加后，您即可将其指定给模型了。选择一个模型，转到 *材质属性* 选项卡，点击材质名称附近的小按钮（若还没有分配材质，则点击 *新建* 按钮），然后从列表中选择刚才附加的材质。</p><img src="files/mat-library-blender/assign-material.jpg" class="centered" style="max-width: 835px">
 
     [anchor:Setting_up_the_Environment]
 
@@ -40,8 +40,10 @@
 
     <p>基于Eevee的材质需要设置好环境，否则材质看起来很暗，且不反光。环境已经在Verge3D的默认立方体项目中设置好了，您可以把它作为自己应用的基础。另外，您也可以从头开始配置环境，如本视频教程所示：
 或者，您也可以从头配置环境，如下所示视频教程：
-YouTube： <a href="https://www.youtube.com/watch?v=symQy5gEHdY" target="_blank">Verge3D for Blender Basics - Part 3 - Materials and Environment</a> 
-Bilibili: [link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=3 Verge3D for Blender基础 - 03.材质与环境]为此，您可以使用材质包的 *environments* 文件夹中的任一HDR纹理。</p>
+<li>YouTube: <a href="https://www.youtube.com/watch?v=symQy5gEHdY" target="_blank">Verge3D for Blender Basics - Part 3 - Materials and Environment</a> </li>
+<li>Bilibili: <a href="https://www.bilibili.com/video/BV1WT4y1u7pT?p=3 target="_blank">Verge3D for Blender基础 - 03.材质与环境</a> </li>
+   <p></p>
+为此，您可以使用材质包的 *environments* 文件夹中的任一HDR纹理。</p>
 
     [anchor:UV_Mapping]
 
