--- a/manual/zh/blender/Morphing.html
+++ b/manual/zh/blender/Morphing.html
@@ -14,13 +14,17 @@
 
     <p>形态键（在Verge3D中称为融合变形）是一个允许您实时修改网格对象的特性。该特性最常见的使用情况是创建参数化对象，这些对象可以改变其尺寸、形状、厚度、孔、轮廓等。</p>
 
-    <p>请参阅以下演示作为示例：</p><iframe class="video-480p" src="https://www.youtube.com/embed/5TbRgUcjwa4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><h2>内容</h2>
+    <p>请参阅以下演示作为示例：</p>
+    
+    <iframe class="video-480p" src="https://player.bilibili.com/player.html?aid=63993568&bvid=BV1j4411Z738&cid=111112031&page=1&high_quality=1&danmaku=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    <h2>内容</h2>
 
     [contents] [anchor:setting_up]
 
     <h2>启用VR设置</h2>
 
-    <p>Blender的形态键是被默认导出的。只支持 *相对(Relative)* 的形态键。请注意，由于硬件限制，活动的形态键的总数是有限的。大多数情况下，蒙皮对象可用5个形态键，其他对象是6个。&ldquo;基型(Basis)&rdquo;键不计入限制）。请参考 <a href="manual/zh/introduction/Hardware-Related-Issues.html#too_many_attributes">本章节</a> 了解如何在更复杂的情况下计算限额。<br/><br/>在渲染过程中，引擎选择6个影响最大的形态键，忽略了所有其他过多的形态键。</p><img src="files/morphing-blender/example.jpg" alt="在Verge3D for Blender中的融合变形" class="centered" style="max-width: 819px">
+    <p>Blender的形态键是被默认导出的。只支持 *相对(Relative)* 的形态键。请注意，由于硬件限制，活动的形态键的总数是有限的。大多数情况下，蒙皮对象可用5个形态键，其他对象是6个。“基型(Basis)”键不计入限制）。请参考 <a href="manual/zh/introduction/Hardware-Related-Issues.html#too_many_attributes">本章节</a> 了解如何在更复杂的情况下计算限额。<br/><br/>在渲染过程中，引擎选择6个影响最大的形态键，忽略了所有其他过多的形态键。</p><img src="files/morphing-blender/example.jpg" alt="在Verge3D for Blender中的融合变形" class="centered" style="max-width: 819px">
 
     [anchor:animation]
 
@@ -40,7 +44,7 @@
 
     <p>您可以观看以下视频，了解如何在Verge3D中使用参数化对象。
 Youtube链接：<a href="https://youtu.be/Y-VUwoDL0qo" target="_blank">Making interactive parametric models with Verge3D, Blender, and WebGL</a>
-Bilibili链接：[link:https://www.bilibili.com/video/BV1T4411Z71p/ 使用Verge3D，Blender和WebGL制作交互式参数化模型]
+Bilibili链接：<a href="https://www.bilibili.com/video/BV1T4411Z71p/" target="_blank">使用Verge3D，Blender和WebGL制作交互式参数化模型</a>
 
     </a>
 
