--- a/manual/zh/blender/Object-Constraints.html
+++ b/manual/zh/blender/Object-Constraints.html
@@ -91,7 +91,7 @@
 
     <h2>与拼图一起使用</h2>
 
-    <p>所有的约束，一旦在Blender中指定并导出，就可以用<a href="manual/zh/puzzles/Animation.html#remove_mute_unmute_constraint">拼图</a>的方式删除、静默或解除静默。与Blender不同的是，移除/静默约束并不会重置对象&mdash;&mdash;这个拼图只是让对象在删除或静默之前具有相同的变换。</p>
+    <p>所有的约束，一旦在Blender中指定并导出，就可以用<a href="manual/zh/puzzles/Animation.html#remove_mute_unmute_constraint">拼图</a>的方式删除、静默或解除静默。与Blender不同的是，移除/静默约束并不会重置对象——这个拼图只是让对象在删除或静默之前具有相同的变换。</p>
 
     <p>此外， *Limit/Copy* *Location/Rotation/Scale*约束可以通过<a href="manual/zh/puzzles/Animation.html#limit_transform">拼图</a>在运行时中指定。</p>
 
