--- a/manual/zh/blender/Shader-Nodes-Reference.html
+++ b/manual/zh/blender/Shader-Nodes-Reference.html
@@ -164,7 +164,7 @@
 
     <h3>切线(Tangent)</h3>
 
-    <p>此节点提供了切线方向。如果*Direction Type*设置为 &quot;UV Map&quot;，那么切线将从网格的活动UV层计算，而不是从节点本身指定的UV层（不支持此参数）。</p><img src="files/shader-nodes-reference-blender/input-tangent.jpg" class="centered" style="max-width: 1000px"><p>请参阅《Blender手册》中关于*Tangent*节点的更多信息： <a href="https://docs.blender.org/manual/zh-hans/latest/render/shader_nodes/input/tangent.html" target="_blank">链接</a>。</p>
+    <p>此节点提供了切线方向。如果*Direction Type*设置为 "UV Map"，那么切线将从网格的活动UV层计算，而不是从节点本身指定的UV层（不支持此参数）。</p><img src="files/shader-nodes-reference-blender/input-tangent.jpg" class="centered" style="max-width: 1000px"><p>请参阅《Blender手册》中关于*Tangent*节点的更多信息： <a href="https://docs.blender.org/manual/zh-hans/latest/render/shader_nodes/input/tangent.html" target="_blank">链接</a>。</p>
 
     [anchor:Vertex_Color]
 
@@ -230,7 +230,7 @@
 
     <h3>亮度/对比度(Bright/Contrast)</h3>
 
-    <p>该节点用于改变颜色输入的亮度和对比度。</p><img src="files/shader-nodes-reference-blender/color-bright-contrast.jpg" class="centered" style="max-width: 1000px"><p>请参阅《Blender手册》中关于&ldquo;Bright/Contrast*&rdquo;节点的更多信息： <a href="https://docs.blender.org/manual/zh-hans/latest/render/shader_nodes/color/bright_contrast.html" target="_blank">链接</a>。</p>
+    <p>该节点用于改变颜色输入的亮度和对比度。</p><img src="files/shader-nodes-reference-blender/color-bright-contrast.jpg" class="centered" style="max-width: 1000px"><p>请参阅《Blender手册》中关于“Bright/Contrast*”节点的更多信息： <a href="https://docs.blender.org/manual/zh-hans/latest/render/shader_nodes/color/bright_contrast.html" target="_blank">链接</a>。</p>
 
     [anchor:Hue_Saturation_Value]
 
