--- a/manual/zh/blender/Transparency.html
+++ b/manual/zh/blender/Transparency.html
@@ -38,7 +38,7 @@
 
     <h2>Eevee材质的透明度</h2>
 
-    <p>可以通过*Transparent BSDF*和*Mix Shader*节点组合来启用Eevee材质的透明度。*Mix Shader*节点中的因子可以用来定义alpha值&mdash;&mdash;你可以直接指定数值，或者创建其他节点（如*Fresnel*）作为依赖，以创作更真实的外观。</p><img src="files/transparency-blender/eevee-ztransparency.jpg"><p>使用<b>混合模式</b>下拉菜单来选择透明度模式。</p>
+    <p>可以通过*Transparent BSDF*和*Mix Shader*节点组合来启用Eevee材质的透明度。*Mix Shader*节点中的因子可以用来定义alpha值——你可以直接指定数值，或者创建其他节点（如*Fresnel*）作为依赖，以创作更真实的外观。</p><img src="files/transparency-blender/eevee-ztransparency.jpg"><p>使用<b>混合模式</b>下拉菜单来选择透明度模式。</p>
 
     <p>或者，你也可以使用原理性BSDF节点的*Alpha*输入。</p><img src="files/transparency-blender/eevee-ztransparency-principled.jpg"><p>要调整材质的透明度，在*Settings*面板上还有其他的选项。</p>
 
