--- a/manual/zh/index.html
+++ b/manual/zh/index.html
@@ -15,15 +15,18 @@
 <body>
   <h1>欢迎阅读Verge3D用户手册 ！</h1>
 
-  <p>本文档面向非程序员（设计师、工程师、教师），他们希望使用他们最喜欢的建模套件（如Blender、3ds Max或Maya）创建交互式3D网络应用。如果您在寻找JavaScript开发者参考，请查看 <a
+  <p>本文档面向喜欢可视化工作流程的创意工作者（设计师、工程师、教师等），提供了一种通过常用建模工具（如Blender、3ds Max或Maya）创建交互式3D网络应用的方法。如果您在寻找JavaScript开发者参考，请查看 <a
       href="api/zh/index.html">此页面</a>。</p>
 
   <p>从左侧选择主题。如果您不知道从哪里开始，请直接从这里开始： <a href="manual/zh/introduction/Beginners-Guide.html">新手入门</a>。</p>
 
-  <p>中文版手册有两个版本，其一是安装包中随附的官方翻译版，由我们的中国区技术代表 [link:https://verge3d.funjoy.tech/r/zhd FunJoy.Tech]
-    维护：[link:https://www.soft8soft.com/docs/manual/zh/index.html Verge3D中文用户手册]。其二是由用户宅家呗维护的版本：<a
-      href="https://zjbcool.com/v3d-user-manual" target="_blank">Verge3D用户手册宅家呗版</a>.</p><img
-    src="files/blank/industrial-robot-gallery.jpg">
+  <p>中文版手册有两个版本：官方翻译版是由我们的中国区技术代表 <a href="https://verge3d.funjoy.tech/">FunJoy.Tech</a> 维护，并在安装包中随附其二是由用户<a href="https://zjbcool.com/v3d-user-manual" target="_blank">宅家呗维护和托管的版本</a>。</p>
+  
+  <p>如果您需要查看英文版文档，请直接在地址栏中的“zh”更改为“en”，即可切换到对应的英文文档页面，或者点击这里查看最新的英文版手册： <a href="https://www.soft8soft.com/docs/manual/en/index.html">Verge3D User Manual</a></p>
+
+  <p>点击这里查看最新的俄语版手册： <a href="https://www.soft8soft.com/docs/manual/ru/index.html">Руководство пользователя Verge3D</a></p>
+  
+    <img src="files/blank/industrial-robot-gallery.jpg">
 </body>
 
 </html>
