--- a/manual/zh/introduction/AR-VR-development.html
+++ b/manual/zh/introduction/AR-VR-development.html
@@ -16,8 +16,16 @@
     <h1>AR/VR开发</h1>
 
     <p>Verge3D可在基于 WebXR （网页扩展现实，一种正在开发中的浏览器技术）基础上，运行基于网页的增强现实（AR）和虚拟现实（VR）体验。此外，您也可以使用此技术的早期版本 WebVR（需在应用管理器中启用Legacy
-      VR 兼容选项，请参见下文）。</p><iframe class="video-480p" src="https://www.youtube.com/embed/92AMh4vV4zw" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      VR 兼容选项，请参见下文）。</p>
+
+      <iframe 
+        class="video-480p"
+        src="https://player.bilibili.com/player.html?aid=62841314&bvid=BV1Ut411N7aa&cid=109173039&page=1&high_quality=1&danmaku=0" 
+        scrolling="no" border="0" frameborder="no" 
+        framespacing="0" allowfullscreen="true"
+        sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"> 
+      </iframe>
+
     <h2>内容</h2>
 
     [contents] [anchor:virtual_reality]
@@ -80,7 +88,7 @@
 
     <p>AR模式可以通过 <a href="manual/zh/puzzles/AR_VR.html#enter_ar_mode">enter AR mode(进入AR模式)</a> 拼图在任何Verge3D应用中启用。</p>
     <img src="files/ar-vr-development/minimal-ar-puzzles.jpg" class="centered" style="max-width: 645px">
-    <p>进入AR模式后，您将能够在与移动设备对齐的&ldquo;真实&rdquo;坐标系中定位3D内容。除此之外，您还可以使用 <a
+    <p>进入AR模式后，您将能够在与移动设备对齐的“真实”坐标系中定位3D内容。除此之外，您还可以使用 <a
         href="manual/zh/puzzles/AR_VR.html#ar_hit_test">detect horizontal surface AR(检测AR水平表面)</a> 拼图来检测水平表面（桌子、书架、地板等）。
     </p><!-- enabling transparency for AR is a hack for WebXR Viewer -->
     <p>此外，要通过3D画布查看真实环境，您应该在 <a href="manual/zh/puzzles/Initialization.html#configure_application">configure
