--- a/manual/zh/introduction/Asset-compression.html
+++ b/manual/zh/introduction/Asset-compression.html
@@ -66,10 +66,10 @@
 
     <p>若要确认应用现在实际加载的是否为压缩资产，请（从应用管理器或部署应用的网站）运行应用，打开浏览器控制台并切换到 <strong>网络</strong> 选项卡。</p><img
       src="files/asset_compression/console-check.jpg" class="centered">
-    <p>重新加载应用以便控制台从头开始显示文件。在列表中找到场景文件&mdash;&mdash;如果一切正常，它们应该以 <strong>.xz</strong> 结尾。</p>
+    <p>重新加载应用以便控制台从头开始显示文件。在列表中找到场景文件——如果一切正常，它们应该以 <strong>.xz</strong> 结尾。</p>
 
     <p>在Windows和Linux平台，Chrome，Firefox浏览器的控制台一般可用F12快捷键打开。在Mac电脑中，Chrome使用
-      View&gt;Developer&gt;JavaScript控制台菜单（快捷键：Option-Cmd-J）开启，Safari需使用 Developer&gt;Show Error
+      View > Developer > JavaScript控制台菜单（快捷键：Option-Cmd-J）开启，Safari需使用 Developer > Show Error
       Console菜单（快捷键：Option-Cmd-C）开启浏览器控制台。</p>
 
     [anchor:Code_Based_or_Player_Based_Apps]
@@ -87,9 +87,9 @@
 
       为：
 
-      <code>
-        var url = 'my_awesome_app.gltf.xz';
-      </code>
+    <code>
+      var url = 'my_awesome_app.gltf.xz';
+    </code>
 
       即可。
     </p>
@@ -122,7 +122,7 @@
 
     <p>1) 使用常用的 <a href="https://www.7-zip.org/download.html">7-Zip</a> 工具创建.xz文件时：</p>
 
-    <p>在您要压缩的文件上点击右键，选择&quot;7-Zip&quot; -&gt; &quot;添加到压缩包...&quot;- 这将打开对应的配置对话框：</p><img
+    <p>在您要压缩的文件上点击右键，选择"7-Zip" -> "添加到压缩包..."- 这将打开对应的配置对话框：</p><img
       src="files/asset_compression/7zip_add_to_archive.png" class="centered" style="max-width: 630px;">
     <p>压缩设置应如下所示：
     <ul>
@@ -139,8 +139,7 @@
 
         7z.exe a -m0=LZMA2:d23 scene.gltf.xz scene.gltf
         7z.exe a -m0=LZMA2:d23 scene.bin.xz scene.bin
-      
-</code>
+      </code>
 
 
     </p>
