--- a/manual/zh/introduction/Creating-Desktop-Apps.html
+++ b/manual/zh/introduction/Creating-Desktop-Apps.html
@@ -21,7 +21,9 @@
       Electronic是一个可以将网页应用打包成为跨平台桌面应用的工具。Electronic可以为Windows、macOS（同时支持Intel和Apple的芯片架构）和Linux创建应用程序。该工具完全免费，易于使用，并允许用JavaScript进行高级定制（如果需要）。
     </p>
 
-    [contents] [anchor:creating_app]
+    [contents]
+	
+	[anchor:creating_app]
 
     <h2>创建应用</h2>
 
