--- a/manual/zh/introduction/Creating-Mobile-Apps.html
+++ b/manual/zh/introduction/Creating-Mobile-Apps.html
@@ -78,8 +78,8 @@
 
     <p>转到Cordova应用模板所在目录，然后添加Android平台：</p>
     <code>
-cordova platform add android
-</code>
+      cordova platform add android
+    </code>
 
     <p>现在到了最难的部分。为了能够在Android模拟器或真实设备中构建和测试应用，您需要安装和配置额外的软件。</p>
 
@@ -94,9 +94,10 @@ cordova platform add android
     <p>您需要的最后一件事是 *Gradle* 构建工具。请查阅 <a href="https://gradle.org/install/">这里</a> 的指引。</p>
 
     <p>要检查您是否满足构建要求，请在应用目录中执行以下命令：</p>
+
     <code>
-cordova requirements
-</code>
+      cordova requirements
+    </code>
 
     <p>要建立您的应用，请执行：</p>
 
@@ -130,7 +131,7 @@ cordova requirements
 
     <p>首先，您需要安装 *Xcode* ，请从Mac应用商店下载安装。</p>
 
-    <p>接下来，请安装 *HomeBrew* 软件包管理器：</p><code class="language-sh">/bin/bash -c &quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)&quot;
+    <p>接下来，请安装 *HomeBrew* 软件包管理器：</p><code class="language-sh">/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)&quot;
 </code>
 
     <p>之后，您需要 <strong>ios-deploy</strong> 工具。</p>
@@ -152,9 +153,10 @@ cordova requirements
     </code>
 
     <p>是时候来运行您的应用了，请执行：</p>
+
     <code>
-cordova emulate ios
-</code>
+      cordova emulate ios
+    </code>
 
     <p>在iOS模拟器中构建并运行。</p><img src="files/creating-mobile-apps/farmers-journey-ios.jpg" class="centered"
       style="max-width: 415px">
@@ -185,9 +187,9 @@ cordova emulate ios
     <p>有3个针对 Cordova的事件可以通过JavaScript或拼图来实现，您可以用它来使应用更适合移动端。</p>
 
     <ul>
-      <li>*deviceready* &mdash; 在应用完全初始化时触发。还可以用它来检测应用何时在Cordova上运行。</li>
-      <li>*pause* &mdash; 当应用进入后台或被另一个应用切换时触发。可以使用它来暂停应用渲染/声音播放/视频等。</li>
-      <li>*resume* &mdash; 当应用被激活时触发。此事件与 *pause* 相反。</li>
+      <li>*deviceready* — 在应用完全初始化时触发。还可以用它来检测应用何时在Cordova上运行。</li>
+      <li>*pause* — 当应用进入后台或被另一个应用切换时触发。可以使用它来暂停应用渲染/声音播放/视频等。</li>
+      <li>*resume* — 当应用被激活时触发。此事件与 *pause* 相反。</li>
     </ul><img src="files/creating-mobile-apps/cordova-events-puzzles.jpg">
     <p>确保您在 *document* 元素上注册了这些事件。此外，如果您的应用运行在iframe中，请使用 *in parent doc* 选项（请在 <a
         href="manual/zh/introduction/HTML-based-user-interfaces.html">这里</a> 阅读有关此设置的更多信息）。</p>
