--- a/manual/zh/introduction/FAQ.html
+++ b/manual/zh/introduction/FAQ.html
@@ -37,8 +37,8 @@
 
     <p>此外，如果您购买的是企业版，您还可以下载Verge3D源代码的特别DevKit发行版。若要获取该发行版，请转到Soft8Soft上的 <a
         href="https://www.soft8soft.com/my-account/" target="_blank">用户面板</a>
-      并点击下载按钮。如果您是从Verge3D中国网站（[link:https://verge3d.funjoy.tech/shop
-      https://Verge3D.FunJoy.Tech]）购买，请从Verge3D中国用户面板中获取下载链接，或直接与微信客服联系。此操作同样适用于从Soft8Soft及FunJoy.Tech购买的材质包。</p>
+      并点击下载按钮。如果您是从<a
+      href="https://verge3d.funjoy.tech/shop/" target="_blank">Verge3D中国网站</a>购买，请查看您的授权邮箱获取下载链接，在订单页面查看DevKit下载链接与密码。您也可以直接与微信客服联系或发送技术支持邮件。此操作同样适用于从Soft8Soft及FunJoy.Tech购买的材质包。</p>
 
     [anchor:how_many_computers]
 
@@ -50,12 +50,11 @@
 
     <h3>Verge3D试用版有哪些限制？允许我做什么...?</h3>
 
-    <p>试用版仅供评估和学习之用，不得用于生产环节&mdash;&mdash;不论是商业或非商业目的。</span></p>
+    <p>试用版仅供评估和学习之用，不得用于生产环节——不论是商业或非商业目的。</span></p>
 
-    <p>因此，您可以使用试用版来学习和提升技能，也可以为您的主管创建模拟演示文档。但您不可以用于教育活动&mdash;&mdash;您可以联系我们申请教育版折扣（ <a
+    <p>因此，您可以使用试用版来学习和提升技能，也可以为您的主管创建模拟演示文档。但您不可以用于教育活动——您可以联系我们申请教育版折扣（ <a
         href="https://www.soft8soft.com/contact/" target="_blank">国际申请通道</a>
-      、[link:https://verge3d.funjoy.tech/contactus 中国区域申请]
-      ）。您不可以用试用版创建作品集，因为这也属于生成流程&mdash;&mdash;请考虑购买Verge3D个人许可证（Freelancers&apos;s license）。</p>
+      、<a href="https://verge3d.funjoy.tech/contactus " target="_blank">中国区域申请</a>）。您不可以用试用版创建作品集，因为这也属于生成流程——请考虑购买Verge3D个人许可证（Freelancers's license）。</p>
 
     <p>查看 <a href="https://www.soft8soft.com/verge3d-trial/" target="_blank">此页</a> 了解更多关于试用版的福利和限制。</p>
 
@@ -66,7 +65,8 @@
     <p>如果您拥有Verge3D团队许可证或个人许可证，或仍在评估试用Verge3D，您可以在此购买我们的 <a
         href="https://www.soft8soft.com/product/verge3d-tech-support-and-consulting-plan/" target="_blank">技术支持服务方案</a>
       。支持服务也作为企业版授权 <a href="https://www.soft8soft.com/product-category/enterprise-licenses/" target="_blank">权益包</a>
-      的一部分提供。</p>
+      的一部分提供。您可以在丰疆科技网站购买<a href="https://verge3d.funjoy.tech/shop/category/3" target="_blank">中文技术支持</a>。
+    </p>
 
     [anchor:General_Questions]
 
@@ -139,7 +139,7 @@
 
     <h3>可以不依靠Blender、3ds Max或Maya运行应用管理器吗？</h3>
 
-    <p>当然，你可以以独立模式运行应用管理器。请从桌面或&ldquo;开始&rdquo;菜单中单击对应的 <em>Verge3D</em> 图标，此快捷方式会启动本地服务器，并在默认浏览器中打开应用管理器页面。</p><img
+    <p>当然，你可以以独立模式运行应用管理器。请从桌面或“开始”菜单中单击对应的 <em>Verge3D</em> 图标，此快捷方式会启动本地服务器，并在默认浏览器中打开应用管理器页面。</p><img
       src="files/faq/app-manager-desktop-launcher.jpg" alt="应用管理器快捷方式" class="centered" style="max-width: 533px">
 
     [anchor:copy_puzzles]
@@ -168,29 +168,29 @@
     <dl>
       <dt>Google Chrome</dt>
       <dd>
-        <p><strong>菜单 &gt; 更多工具 &gt; 开发者工具</strong> 或</p>
+        <p><strong>菜单 > 更多工具 > 开发者工具</strong> 或</p>
         <p>Windows/Linux系统中按 *F12* 键， 或macOS系统中按 <strong>Option + ⌘ + J</strong> 快捷键组合。</p>
         <p>在开发者工具窗口，选择 *控制台* 标签。</p>
       </dd><img src="files/faq/chrome-console.jpg" alt="打开Chrome开发者控制台" class="centered">
       <dt>Mozilla Firefox（火狐浏览器）</dt>
       <dd>
-        <p><strong>菜单 &gt; Web开发者 &gt; 浏览器控制台</strong> 或</p>
+        <p><strong>菜单 > Web开发者 > 浏览器控制台</strong> 或</p>
         <p>Windows/Linux系统中按 *F12* 键， 或macOS系统中按 <strong>移动 + ⌘ + J</strong> 快捷键组合。</p>
       </dd>
       <dt>Apple Safari</dt>
       <dd>
-        <p>在Safari偏好设置中开启 *开发菜单* （*高级*标签内），然后点击菜单 <strong>开发 &gt; 显示JavaScript控制台</strong> 或</p>
+        <p>在Safari偏好设置中开启 *开发菜单* （*高级*标签内），然后点击菜单 <strong>开发 > 显示JavaScript控制台</strong> 或</p>
         <p>按下 <strong>Option + ⌘ + C</strong> 快捷键组合。</p>
       </dd>
       <dt>Microsoft Edge</dt>
       <dd>
-        <p><strong>菜单 &gt; F12开发者工具</strong> 或</p>
+        <p><strong>菜单 > F12开发者工具</strong> 或</p>
         <p>直接按下 F12 键.</p>
         <p>在开发者工具窗口，选择 *控制台* 标签。</p>
       </dd>
       <dt>Microsoft Internet Explorer</dt>
       <dd>
-        <p><strong>齿轮菜单 &gt; F12开发者工具</strong> 或</p>
+        <p><strong>齿轮菜单 > F12开发者工具</strong> 或</p>
         <p>直接按下 F12 键.</p>
         <p>在开发者工具窗口，选择 *控制台* 标签。</p>
       </dd>
@@ -211,7 +211,7 @@
       <em>区分大小写</em> 的文件系统，这可能导致文件上传到服务器时出现问题。
     </p>
 
-    <p>例如，您创建了一个 &quot;MyConfigurator&quot; 应用。默认情况下，这个应用将包括以下资产文件：</p>
+    <p>例如，您创建了一个 "MyConfigurator" 应用。默认情况下，这个应用将包括以下资产文件：</p>
 
     <code class="language-html">
       MyConfigurator.blend (or MyConfigurator.max or MyConfigurator.mb)
@@ -417,7 +417,7 @@
 
     <h3>既然Verge3D基于Three.js，那么它和Three.js的API兼容吗？</h3>
 
-    <p>在创建Verge3D过程中，我们对Three.js代码库做了大量修改，因此我们决定对API使用&quot;v3d&quot;前缀。但是，我们依然尝试与Three.js保持源代码的兼容性。大多数基于Three.js的应用和 <a
+    <p>在创建Verge3D过程中，我们对Three.js代码库做了大量修改，因此我们决定对API使用"v3d"前缀。但是，我们依然尝试与Three.js保持源代码的兼容性。大多数基于Three.js的应用和 <a
         href="https://cdn.soft8soft.com/demo/examples/index.html" target="_blank">实例</a> 都可以在Verge3D中直接运行，无需进行任何修改。</p>
 
     [anchor:texture_memory_usage]
@@ -439,7 +439,7 @@
 
     <h3>如何在调整大小时保持场景比例？</h3>
 
-    <p>我们希望所有对象，无论它们与摄影机的距离如何，都显示相同的大小&mdash;&mdash;即使调整了窗口的大小。解决此问题的关键方程是这个针对给定距离的可见高度公式：
+    <p>我们希望所有对象，无论它们与摄影机的距离如何，都显示相同的大小——即使调整了窗口的大小。解决此问题的关键方程是这个针对给定距离的可见高度公式：
 
 
       <code>        
@@ -485,9 +485,9 @@
     <h3>键盘控制对嵌入iframe的应用不起作用。</h3>
     <p>当页面上的其他HTML成为焦点时，就会发生这种情况。要解决此问题，请尝试以下代码：
 
-      <code>
-        document.getElementById("my_iframe_id").focus();
-      </code>
+    <code>
+      document.getElementById("my_iframe_id").focus();
+    </code>
 
       其中 <strong>my_iframe_id</strong> 是您的iframe元素的ID。
     </p>
