--- a/manual/zh/introduction/Facebook-3D-Posts.html
+++ b/manual/zh/introduction/Facebook-3D-Posts.html
@@ -33,7 +33,7 @@
 
     <h2>从3ds Max导出GLB文件</h2>
 
-    <p>要在 <strong>3ds Max</strong> 中执行导出，请转到Verge3D菜单，并选择&quot;Export Facebook GLB...&quot;。</p><img
+    <p>要在 <strong>3ds Max</strong> 中执行导出，请转到Verge3D菜单，并选择"Export Facebook GLB..."。</p><img
       src="files/facebook-3d-posts/export-glb-max1.jpg" class="centered" style="max-width: 1000px">
     <p>在显示的文件对话框中，选择导出路径并单击*保存*。</p><img src="files/facebook-3d-posts/export-glb-max2.jpg" class="centered"
       style="max-width: 1000px">
@@ -42,8 +42,8 @@
 
     <h2>从Blender导出GLB文件</h2>
 
-    <p>要在 <strong>Blender</strong> 中执行导出，请转到&ldquo;文件&gt;导出&rdquo;，然后选择&ldquo;Facebook
-      GLB（.glb）&rdquo;选项。通用的GLB导出选项&ldquo;Verge3D glTF Binary（.glb）&rdquo;也可以工作，但会生成优化程度相对稍低的文件。</p><img
+    <p>要在 <strong>Blender</strong> 中执行导出，请转到“文件 > 导出”，然后选择“Facebook
+      GLB（.glb）”选项。通用的GLB导出选项“Verge3D glTF Binary（.glb）”也可以工作，但会生成优化程度相对稍低的文件。</p><img
       src="files/facebook-3d-posts/export-glb-blender.png" class="centered" style="max-width: 1000px">
     <p><a href="manual/zh/introduction/Facebook-3D-Posts.html#Compose_3D_Post_in_Facebook"
         id="Compose_3D_Post_in_Facebook" class="permalink">#</a></p>
@@ -55,8 +55,8 @@
     <p>在Facebook post编辑器中，您也可以根据自己的喜好选择背景。</p><img src="files/facebook-3d-posts/3d-post-example.png" class="centered"
       style="max-width: 1000px">
     <p>看一看它在Facebook上是什么样子的： <a href="https://www.facebook.com/soft8soft/posts/2003080113280076"
-        target="_blank">链接</a>。此模型的源文件可以在Verge3D安装目录的&ldquo;applications&rdquo;文件夹中找到（请参见下面的&ldquo;Starter
-      files&rdquo;）。</p>
+        target="_blank">链接</a>。此模型的源文件可以在Verge3D安装目录的“applications”文件夹中找到（请参见下面的“Starter
+      files”）。</p>
 
 
     <p><a href="manual/zh/introduction/Facebook-3D-Posts.html#Starter_Files" id="Starter_Files" class="permalink">#</a>
@@ -67,7 +67,7 @@
     <p>我们提供了一个为3ds Max和Blender配置了必要导出设置的Verge3D项目示例。starter项目包含的环境映射与Facebook用于最大一致性的环境映射完全相同。</p><img
       src="files/facebook-3d-posts/facebook-ready-asset-file-blender.jpg" class="centered" style="max-width: 1000px">
     <p>在Verge3D的 <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">发行版</a>
-      中可以找到这些文件，路径为&quot;applications/fb_max&quot; (3ds Max)或 &quot;applications/fb&quot; (Blender)。</p>
+      中可以找到这些文件，路径为"applications/fb_max" (3ds Max)或 "applications/fb" (Blender)。</p>
 
 
     <p><a href="manual/zh/introduction/Facebook-3D-Posts.html#Technical_Requirements" id="Technical_Requirements"
@@ -78,7 +78,7 @@
     <ul>
       <li>Facebook要求您上传的GLB文件小于3MB，文件越小越好。</li>
       <li>仅支持符合glTF标准的PBR材质，如(<a href="manual/zh/introduction/Physical-material.html">3ds Max</a> 和 <a
-          href="manual/zh/introduction/Physical-material-Blender.html">Blender</a>)的这些材质是支持的&mdash;&mdash;如果您的模型不是这些材质，请尝试转换。
+          href="manual/zh/introduction/Physical-material-Blender.html">Blender</a>)的这些材质是支持的——如果您的模型不是这些材质，请尝试转换。
       </li>
       <li>纹理必须使用PNG或JPEG文件，并且每个维度都必须是2的幂（例如，256x512是可以的）。</li>
       <li>纹理最高可达4k，但Facebook开发者建议将其保持在2k以下。</li>
