--- a/manual/zh/introduction/Features.html
+++ b/manual/zh/introduction/Features.html
@@ -52,9 +52,13 @@
   <article>
     <h1>Verge3D功能特性</h1>
 
-    <p>以下是Verge3D主要的特点与功能列表：</p><iframe class="video-480p" src="https://www.youtube.com/embed/xJIsmgd2nNU"
-      frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+    <p>以下是Verge3D主要的特点与功能列表：</p>
+	
+    <iframe class="video-480p"
+      src="https://player.bilibili.com/player.html?aid=44196731&bvid=BV17b411Y7Jm&as_wide=0&page=1&high_quality=1&danmaku=0" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
     <h2>内容</h2>
 
     <ul>
@@ -104,9 +108,7 @@
       </tr>
 
       <tr>
-        <td colspan=3>此外，您可以使用任何支持导出为glTF 2.0格式的建模套件，以及任何支持导出这 <a
-            href="manual/zh/introduction/Features.html#feature_import_formats">20余种格式</a>
-          （包括FBX，OBJ，COLLADA和3DS等）的3D图形软件。</td>
+        <td colspan=3>此外，您可以使用任何支持导出为glTF 2.0格式的建模套件，以及任何支持导出这 <a href="manual/zh/introduction/Features.html#feature_import_formats">20余种格式</a> 包括FBX，OBJ，COLLADA和3DS等）的3D图形软件。</td>
       </tr>
 
       <tr id="feature_materials">
@@ -264,8 +266,7 @@
 
       <tr id="feature_visual_scripting">
         <th>可视化编程</th>
-        <td colspan=3><a href="manual/zh/introduction/Puzzles-Visual-Logic-Editor.html">Verge3D Puzzles</a>
-          是一种可视化逻辑编程环境，可以用拖拽的方式快速创建互动场景。它具有以下功能：<ul>
+        <td colspan=3><a href="manual/zh/introduction/Puzzles-Visual-Logic-Editor.html">Verge3D Puzzles</a> 是一种可视化逻辑编程环境，可以用拖拽的方式快速创建互动场景。它具有以下功能：<ul>
             <li>处理用户事件，例如鼠标单击/触摸，悬停和拖动。</li>
             <li>检索场景对象、动画和材质。</li>
             <li>移动、旋转、缩放3D对象，获取对象之间的距离。</li>
@@ -310,10 +311,9 @@
         <td colspan=3>您可以通过以下方式发布内容：<ul>
             <li>您自己的服务器。</li>
             <li>任意网络托管服务商（例如GoDaddy，DigitalOcean，Amazon AWS，腾讯云，阿里云等）。</li>
-            <li><a href="https://www.soft8soft.com/verge3d-network/" target="_blank">Verge3D Network</a>，Verge3D云托管服务。
+            <li><a href="https://www.soft8soft.com/verge3d-network/" target="_blank">Verge3D Network</a>，Verge3D云托管服务。中国大陆地区访问受限，请咨询我们的中国区技术代表咨询解决方案。
             </li>
-            <li>通过 <a href="manual/zh/introduction/Creating-Mobile-Apps.html">打包</a> Verge3D app为移动应用的方式，发布到Google
-              Play应用商店或Apple App Store。</li>
+            <li>通过 <a href="manual/zh/introduction/Creating-Mobile-Apps.html">打包</a> Verge3D app为移动应用的方式，发布到Google Play应用商店或Apple App Store。</li>
             <li>使用 <a href="manual/zh/introduction/Creating-Desktop-Apps.html">Electron</a> 框架构建的独立桌面应用或移动应用。</li>
           </ul>
         </td>
@@ -321,16 +321,12 @@
 
       <tr id="feature_ui">
         <th>UI和HTML布局</th>
-        <td colspan=3>使用外部所见即所得（WYSIWYG）编辑器创建的界面布局可以 <a
-            href="manual/zh/introduction/HTML-based-user-interfaces.html">与Puzzles链接</a>
-          ，以触发对浏览器中渲染的3D场景的更改，反之亦然。<br>我们推荐使用 <a href="https://webflow.grsm.io/3441118" target="_blank">Webflow</a>
-          网站编辑器的完全无代码工作流程。</td>
+        <td colspan=3>使用外部所见即所得（WYSIWYG）编辑器创建的界面布局可以 <a href="manual/zh/introduction/HTML-based-user-interfaces.html">与Puzzles链接</a>，以触发对浏览器中渲染的3D场景的更改，反之亦然。<br>我们推荐使用 <a href="https://webflow.grsm.io/3441118" target="_blank">Webflow</a> 网站编辑器的完全无代码工作流程。</td>
       </tr>
 
       <tr id="feature_networking">
         <th>服务器端功能与网络服务</th>
-        <td colspan=3>WordPress是当前网络中最为流行的内容管理系统（CMS），Verge3D附带了一个 <a
-            href="manual/zh/introduction/Wordpress-Plugin.html">WordPress插件</a> ，包含了以下功能：<ul>
+        <td colspan=3>WordPress是当前网络中最为流行的内容管理系统（CMS），Verge3D附带了一个 <a href="manual/zh/introduction/Wordpress-Plugin.html">WordPress插件</a> ，包含了以下功能：<ul>
             <li>应用托管和发布（嵌入）。</li>
             <li>持久文件存储。</li>
             <li>完全可定制的电子商务系统，用于处理客户订单。</li>
@@ -339,7 +335,8 @@
 
       <tr id="feature_postprocessing">
         <th>后期处理效果</th>
-        <td colspan=3>以下效果可以 <a href="manual/zh/puzzles/Postprocessing.html">通过拼图启用</a>：<ul>
+        <td colspan=3>以下效果可以 <a href="manual/zh/puzzles/Postprocessing.html">通过拼图启用</a>：
+          <ul>
             <li>环境遮蔽(AO)</li>
             <li>辉光(Bloom)</li>
             <li>亮度/对比度(Bright/Contrast)</li>
@@ -348,7 +345,9 @@
             <li>轮廓(outline)</li>
             <li>屏幕空间反射与折射(SSR)</li>
             <li>超采样抗锯齿(SSAA)</li>
-          </ul>此外，可以用JavaScript启用以下效果：<ul>
+          </ul>
+          此外，可以用JavaScript启用以下效果：
+          <ul>
             <li>自适应色调映射(Adaptive Tone Mapping)</li>
             <li>曙暮晖(Crepuscular Rays)，也被称之为云隙光(Sunbeams)或上帝之光(God Rays)</li>
             <li>增强型亚像素形态抗锯齿（SMAA, Subpixel Morphological Anti-Aliasing）</li>
@@ -369,9 +368,9 @@
           <p>支持以下 <a href="manual/zh/introduction/AR-VR-development.html">虚拟现实技术</a>：</p>
           <ul>
             <li>WebXR</li>
-            <li>WebVR&mdash;&mdash;通过兼容性模块。</li>
-            <li>Cardboard&mdash;&mdash;在上不支持WebXR/WebVR的移动设备上。</li>
-            <li>3D立体图&mdash;&mdash;基于立体摄影机实现，可使用JavaScript激活。</li>
+            <li>WebVR——通过兼容性模块。</li>
+            <li>Cardboard——在上不支持WebXR/WebVR的移动设备上。</li>
+            <li>3D立体图——基于立体摄影机实现，可使用JavaScript激活。</li>
           </ul>
         </td>
       </tr>
@@ -388,8 +387,7 @@
 
       <tr id="feature_physics">
         <th>物理系统</th>
-        <td colspan=3><a href="manual/zh/introduction/Physics-Guide.html">Physics module(物理模块)</a>
-          可实现碰撞检测、动态移动对象、角色和车辆的支持，弹簧，绳索和布料模拟等。从2.11版开始，可直接通过拼图创建和控制物理仿真了，无需编程。</td>
+        <td colspan=3><a href="manual/zh/introduction/Physics-Guide.html">Physics module(物理模块)</a> 可实现碰撞检测、动态移动对象、角色和车辆的支持，弹簧，绳索和布料模拟等。从2.11版开始，可直接通过拼图创建和控制物理仿真了，无需编程。</td>
       </tr>
 
       <tr id="feature_audio">
@@ -437,46 +435,26 @@
       <tr id="feature_demos">
         <th>演示与范例</th>
         <td colspan=3>超过150个编码示例和一系列功能齐全的演示应用，包括:<ul>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/arcade_racing/arcade_racing.html"
-                target="_blank">Arcade Racing</a> &mdash; 街机赛车：一个复古风格的赛车游戏，演示了先进的物理性能。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/augmented_reality/augmented_reality.html"
-                target="_blank">Augmented Reality</a> &mdash; 增强现实：演示了WebAR的基本功能。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/clipping_planes/clipping_planes.html"
-                target="_blank">Clipping Planes</a> &mdash; 剪切平面：展示了如何将剪切平面（又称横截面或平面剖面）用于工程可视化和科学可视化。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/custom_image/custom_image.html"
-                target="_blank">Custom Image</a> &mdash; 自定义图片：一个虚拟相框，允许上传、存储和分享图片。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/global_illumination/global_illumination.html"
-                target="_blank">Global Illumination</a> &mdash; 全局照明：一个具有高级照明效果的室内演示（如动态立方体反射光照探头和区域光）。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/farmers_journey/index.html"
-                target="_blank">Farmer&apos;s Journey</a> &mdash; 农民的旅行： 无编程制作的浏览器游戏。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/industrial_robot/index.html"
-                target="_blank">Industrial Robot VR</a> &mdash; 工业机器人：具有VR和AR特性的交互式机器人展示。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/jewelry_configurator/index.html"
-                target="_blank">Jewelry Configurator</a> &mdash; 珠宝配置器：高级珠宝定制电商系统演示。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/load_unload/load_unload.html" target="_blank">Load
-                Unload</a> &mdash; 加载/卸载：资产动态加载案例。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/parametric_models/index.html"
-                target="_blank">Parametric Models</a> &mdash; 参数化模型：可执行模型参数化变换的3D配置器。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/pbr/pbr.html" target="_blank">PBR</a> &mdash; glTF
-              2.0兼容性材质演示案例。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/recliner/index.html" target="_blank">Recliner</a>
-              &mdash; 可调节沙发：3D配置器，一个开箱即用的电子商务案例。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf"
-                target="_blank">Ring</a> &mdash; 戒指：简单的3D戒指定制应用，演示动态报价与在线下单功能。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/scooter/index.html" target="_blank">Scooter</a>
-              &mdash; 电动车：先进的3D配置器，具有真实质感的PBR材质，可组合出上百万的配置结果。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/scroll_animation/scroll_animation.html"
-                target="_blank">Scroll Animation</a> &mdash; 滚动动画：通过触发3D模型动画实现网页滚动时的动态交互效果。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/simple_configurator/simple_configurator.html"
-                target="_blank">Simple Configurator</a> &mdash; 简单配置器：电商基础教程案例。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/spinner/spinner.html" target="_blank">Spinner</a>
-              &mdash; 指尖陀螺：简单的产品演示，可配置材质和触发动画，拼图变量可向WooCommerce电商插件发送数据。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/swiss_army_knife/index.html" target="_blank">Swiss
-                Army Knife</a> &mdash; 瑞士军刀：电子商务的高级功能演示案例与教程。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/teapot_heater/index.html" target="_blank">Teapot
-                Heater</a> &mdash; 茶壶加热器：使用拼图制作的精美的3D交互动画。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/applications/video_texture/video_texture.html"
-                target="_blank">Video Texture</a> &mdash; 视频纹理效果演示。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/arcade_racing/arcade_racing.html" target="_blank">Arcade Racing</a> — 街机赛车：一个复古风格的赛车游戏，演示了先进的物理性能。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/augmented_reality/augmented_reality.html" target="_blank">Augmented Reality</a> — 增强现实：演示了WebAR的基本功能。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/clipping_planes/clipping_planes.html" target="_blank">Clipping Planes</a> — 剪切平面：展示了如何将剪切平面（又称横截面或平面剖面）用于工程可视化和科学可视化。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/custom_image/custom_image.html" target="_blank">Custom Image</a> — 自定义图片：一个虚拟相框，允许上传、存储和分享图片。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/global_illumination/global_illumination.html" target="_blank">Global Illumination</a> — 全局照明：一个具有高级照明效果的室内演示（如动态立方体反射光照探头和区域光）。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/farmers_journey/index.html" target="_blank">Farmer's Journey</a> — 农民的旅行： 无编程制作的浏览器游戏。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/industrial_robot/index.html" target="_blank">Industrial Robot VR</a> — 工业机器人：具有VR和AR特性的交互式机器人展示。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/jewelry_configurator/index.html" target="_blank">Jewelry Configurator</a> — 珠宝配置器：高级珠宝定制电商系统演示。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/load_unload/load_unload.html" target="_blank">Load Unload</a> — 加载/卸载：资产动态加载案例。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/parametric_models/index.html" target="_blank">Parametric Models</a> — 参数化模型：可执行模型参数化变换的3D配置器。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/pbr/pbr.html" target="_blank">PBR</a> — glTF 2.0兼容性材质演示案例。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/recliner/index.html" target="_blank">Recliner</a> — 可调节沙发：3D配置器，一个开箱即用的电子商务案例。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf" target="_blank">Ring</a> — 戒指：简单的3D戒指定制应用，演示动态报价与在线下单功能。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/scooter/index.html" target="_blank">Scooter</a> — 电动车：先进的3D配置器，具有真实质感的PBR材质，可组合出上百万的配置结果。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/scroll_animation/scroll_animation.html" target="_blank">Scroll Animation</a> — 滚动动画：通过触发3D模型动画实现网页滚动时的动态交互效果。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/simple_configurator/simple_configurator.html" target="_blank">Simple Configurator</a> — 简单配置器：电商基础教程案例。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/spinner/spinner.html" target="_blank">Spinner</a> — 指尖陀螺：简单的产品演示，可配置材质和触发动画，拼图变量可向WooCommerce电商插件发送数据。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/swiss_army_knife/index.html" target="_blank">Swiss Army Knife</a> — 瑞士军刀：电子商务的高级功能演示案例与教程。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/teapot_heater/index.html" target="_blank">Teapot Heater</a> — 茶壶加热器：使用拼图制作的精美的3D交互动画。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/applications/video_texture/video_texture.html" target="_blank">Video Texture</a> — 视频纹理效果演示。</li>
           </ul>
         </td>
       </tr>
@@ -487,7 +465,7 @@
           <p>除了glTF 2.0，您还以导入以下格式的文件。</p>
           <p>几何体/材质：</p>
           <ul>
-            <li>3DS &mdash; Autodesk 3ds Max早期文件格式。</li>
+            <li>3DS - Autodesk 3ds Max早期文件格式。</li>
             <li>3MF - 制造业3D格式。</li>
             <li>AMF - 积层造型过程文件格式。</li>
             <li>AWD - 用于Away3D引擎。</li>
@@ -512,7 +490,7 @@
           </ul>
           <p>动画：</p>
           <ul>
-            <li>BVH &mdash; BioVision等设备对人体运动进行捕获后产生的角色动画文件格式。</li>
+            <li>BVH - BioVision等设备对人体运动进行捕获后产生的角色动画文件格式。</li>
             <li>MD2 - 用于Quake II引擎。</li>
             <li>MMD - MikuMikuDance的文件格式。</li>
           </ul>
@@ -523,7 +501,7 @@
             <li>PVR - DirectX纹理压缩格式。</li>
             <li>HDR - RGBE 或 Radiance HDR。</li>
             <li>KTX - Khronos的纹理格式。</li>
-            <li>NRRD - &ldquo;接近原始栅格数据&rdquo;格式。</li>
+            <li>NRRD - “接近原始栅格数据”格式。</li>
             <li>SVG</li>
             <li>TGA - Truevision TGA光栅图形格式。</li>
             <li>TTF</li>
@@ -593,9 +571,7 @@
 
       <tr id="feature_requirements">
         <th>系统要求</th>
-        <td colspan=3>Verge3D应用可以在任何能够运行支持WebGL技术的web浏览器的系统上启动。请参阅 <a
-            href="https://www.soft8soft.com/webgl-supported-browsers-and-troubleshooting/" target="_blank">本页</a>
-          了解支持的浏览器列表。</td>
+        <td colspan=3>Verge3D应用可以在任何能够运行支持WebGL技术的web浏览器的系统上启动。请参阅 <a href="https://www.soft8soft.com/webgl-supported-browsers-and-troubleshooting/" target="_blank">本页</a> 了解支持的浏览器列表。</td>
       </tr>
 
       <tr id="feature_dev_requirements">
@@ -608,12 +584,8 @@
       <tr>
         <td class="centered"><a href="https://www.blender.org/download/requirements/" target="_blank">与Blender类似</a>
         </td>
-        <td class="centered"><a
-            href="https://knowledge.autodesk.com/support/3ds-max/troubleshooting/caas/sfdcarticles/sfdcarticles/System-requirements-for-Autodesk-3ds-Max-2018.html"
-            target="_blank">与3ds Max类似</a></td>
-        <td class="centered"><a
-            href="https://knowledge.autodesk.com/support/maya/troubleshooting/caas/sfdcarticles/sfdcarticles/System-requirements-for-Autodesk-Maya-2020.html"
-            target="_blank">与Maya类似</a></td>
+        <td class="centered"><a href="https://knowledge.autodesk.com/support/3ds-max/troubleshooting/caas/sfdcarticles/sfdcarticles/System-requirements-for-Autodesk-3ds-Max-2018.html" target="_blank">与3ds Max类似</a></td>
+        <td class="centered"><a href="https://knowledge.autodesk.com/support/maya/troubleshooting/caas/sfdcarticles/sfdcarticles/System-requirements-for-Autodesk-Maya-2020.html" target="_blank">与Maya类似</a></td>
       </tr>
     </table>
 
