--- a/manual/zh/introduction/Performance-Bottlenecks.html
+++ b/manual/zh/introduction/Performance-Bottlenecks.html
@@ -41,11 +41,11 @@
     <p>FPS（每秒帧数，或帧率）是代表应用的渲染时间和用户体验的一个至关重要的量：</p>
 
     <ul>
-      <li>&lt;20 ：应用会非常卡顿，几乎无法使用。</li>
+      <li><20 ：应用会非常卡顿，几乎无法使用。</li>
       <li>20-40 ：反应迟缓，但可以接受。</li>
       <li>40-60 ：足够好了。</li>
       <li>60 ：桌面和移动浏览器上的理想帧率。</li>
-      <li>&gt;60 ：为VR头戴式设备做开发的目标帧率。</li>
+      <li>>60 ：为VR头戴式设备做开发的目标帧率。</li>
     </ul>
 
     <p>从3.2版本开始，Verge3D自带内置的FPS计数器。您可以通过以下方式启用它：</p>
@@ -124,7 +124,7 @@
       <dt>总渲染时间(Total Render Time)</dt>
       <dd>渲染场景所用的总时间（以毫秒为单位）。</dd>
 
-      <dt>纹理和渲染缓存(Textures &amp; Render Buffers)</dt>
+      <dt>纹理和渲染缓存(Textures & Render Buffers)</dt>
       <dd>纹理和渲染缓存统计（分辨率）。纹理列印在列表的顶部（前缀为*texture*)，而渲染缓存列印在列表的底部（前缀为*WebGlRenderTarget*)。</dd>
     </dl>
 
@@ -150,7 +150,7 @@
         href="manual/zh/max/Materials-Maps-Reference.html#performance_considerations">3ds Max</a> 或 <a
         href="manual/zh/maya/Materials.html#performance_considerations">Maya</a> 的材质性能小节。</p>
 
-    <p>属性设置像素比 &lt; 1，也可以解决着色器性能受限的问题 <a href="manual/zh/puzzles/System.html#set_screen_scale">set screen
+    <p>属性设置像素比 < 1，也可以解决着色器性能受限的问题 <a href="manual/zh/puzzles/System.html#set_screen_scale">set screen
         scale（设置屏幕比例）</a> 拼图。但这会严重降低应用的质量表现，仅作为最后的备用解决方案。</p>
 
     [anchor:postprocessing]
@@ -243,9 +243,9 @@
     <p>按大小对资源进行排序，找到加载最慢的资源。多数情况下，这些资产可分为两类：</p>
 
     <ol>
-      <li>*Verge3D二进制数据(Binary)*：以 *.bin 或 *.bin.xz 为扩展名&mdash;&mdash;包含了场景中的几何图形、变形和动画。启用资产压缩可以显著减小此文件尺寸，建议在应用中始终 <a
+      <li>*Verge3D二进制数据(Binary)*：以 *.bin 或 *.bin.xz 为扩展名——包含了场景中的几何图形、变形和动画。启用资产压缩可以显著减小此文件尺寸，建议在应用中始终 <a
           href="manual/zh/introduction/Asset-compression.html">启用</a> 此选项。</li>
-      <li>*纹理(Textures)*：以 *.jpg、*.png 或 *.hdr 为扩展名&mdash;&mdash;请参阅 <a
+      <li>*纹理(Textures)*：以 *.jpg、*.png 或 *.hdr 为扩展名——请参阅 <a
           href="manual/zh/introduction/Optimizing-WebGL-performance.html#Texturing">这里</a> 有关如何优化纹理的更多信息。</li>
     </ol>
 
@@ -284,7 +284,7 @@
 
     <p>例如，一个大小为4096x4096的纹理将占用了接近90 Mb的显存。请在 <a
         href="manual/zh/introduction/Performance-Bottlenecks.html#performance_profile">performance profile</a>中
-      <strong>Textures &amp; Render Buffers</strong> 中查看应用中用到的所有纹理的尺寸数据。
+      <strong>Textures & Render Buffers</strong> 中查看应用中用到的所有纹理的尺寸数据。
     </p><img src="files/performance-bottlenecks/performance-profile-textures.jpg" alt="在Verge3D中分析纹理">
     <p>另请参阅 <a href="manual/zh/introduction/FAQ.html#texture_memory_usage">这里</a> 有关如何计算纹理内存使用的更多信息。</p>
 
@@ -294,7 +294,7 @@
 
     <p>大多数后期处理效果需要额外的渲染缓存，这会消耗GPU内存。在 <a
         href="manual/zh/introduction/Performance-Bottlenecks.html#performance_profile">performance profile</a> 中
-      <strong>Textures &amp; Render Buffers</strong> 列表底部查看所有的渲染缓存。
+      <strong>Textures & Render Buffers</strong> 列表底部查看所有的渲染缓存。
     </p><img src="files/performance-bottlenecks/performance-profile-render-buffers.jpg" alt="在Verge3D中分析渲染缓存"
       class="centered" style="max-width: 816px;">
 
