--- a/manual/zh/introduction/Personalizing-Verge3D-Apps.html
+++ b/manual/zh/introduction/Personalizing-Verge3D-Apps.html
@@ -31,10 +31,10 @@
 
     <p>除了渲染3D部分的画布之外，Verge3D应用还包括额外的HTML元素，用于预加载器、标注、全屏按钮等。所有这些元素都可以由CSS类来补充，并且可以轻松地修改。</p>
 
-    <p>个性化应用的最简单的方法&mdash;&mdash;在应用创建对话框中选择 *Standard Light* 或 *Standard Dark* 模板：</p><img
+    <p>个性化应用的最简单的方法——在应用创建对话框中选择 *Standard Light* 或 *Standard Dark* 模板：</p><img
       src="files/personalizing-verge3d-apps/light-dark-theme.jpg" class="centered" style="max-width: 522px">
-    <p>更多高级定制，请查看 <em>src/style.css</em> 文件。请不要更改这个文件，因为它已经编译进Verge3D了。作为替代，您可在应用的主CSS文件中编辑和添加样式代码。如应用名为&ldquo;My
-      Awesome app&rdquo;，应修改以下文件：</p>
+    <p>更多高级定制，请查看 <em>src/style.css</em> 文件。请不要更改这个文件，因为它已经编译进Verge3D了。作为替代，您可在应用的主CSS文件中编辑和添加样式代码。如应用名为“My
+      Awesome app”，应修改以下文件：</p>
 
     <code>
       applications/my_awesome_app/my_awesome_app.css
@@ -163,8 +163,7 @@
 
     <p class="note">标题长度请保持在50-60个英文字符以下，或大约25~30个汉字。</p>
 
-    <p>可以以相同的方式更改应用描述。查找和替换 <em>Interactive 3D web application...</em> 的内容 <em>&lt;meta
-        name=&quot;description&quot;&gt;</em> 标记：</p>
+    <p>可以以相同的方式更改应用描述。查找和替换 <em>Interactive 3D web application...</em> 的内容 <em>&lt;meta name=&quot;description&quot;&gt;</em> 标记：</p>
 
 
     <code>
@@ -174,15 +173,22 @@
 
     <p>改成更符合您自己需要的内容。</p>
 
-    <p class="note">与标题类似，描述文本不应该过长&mdash;&mdash;120~160个英文字符就足够了，对应中文字符约为60~80个。</p>
+    <p class="note">与标题类似，描述文本不应该过长——120~160个英文字符就足够了，对应中文字符约为60~80个。</p>
 
     [anchor:language]
 
     <h2>语言</h2>
 
     <p>修改主HTML文件开头的以下代码段以更改应用语言：</p>
+
     <code>
       &lt;html lang=&quot;en&quot;&gt;
+    </code>
+    
+    <p>简体中文请设置为&quot;zh&quot; 或 &quot;zh-Hans&quot;</p>
+
+    <code>
+      &lt;html lang=&quot;zh&quot;&gt; 
     </code>
 
     <p>参见 <a href="https://www.w3schools.com/tags/ref_language_codes.asp" target="_blank">这里</a> 了解不同语言的代码列表。</p>
@@ -209,13 +215,13 @@
 
     <h2>社交媒体标签</h2>
 
-    <p>为了让你的应用链接在Twitter上看起来更酷，请修改主HTML文件中的&ldquo;title/description/image&rdquo;标签：</p>
+    <p>为了让你的应用链接在Twitter上看起来更酷，请修改主HTML文件中的“title/description/image”标签：</p>
 
 
     <code>
-      &lt;meta name=&quot;twitter:title&quot; content=&quot;Verge3D Web Interactive&quot;&gt;
-      &lt;meta name=&quot;twitter:description&quot; content=&quot;Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.&quot;&gt;
-      &lt;meta name=&quot;twitter:image:src&quot; content=&quot;https://cdn.soft8soft.com/images/player_socials.jpg&quot;&gt;
+&lt;meta name=&quot;twitter:title&quot; content=&quot;Verge3D Web Interactive&quot;&gt;
+&lt;meta name=&quot;twitter:description&quot; content=&quot;Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.&quot;&gt;
+&lt;meta name=&quot;twitter:image:src&quot; content=&quot;https://cdn.soft8soft.com/images/player_socials.jpg&quot;&gt;
     </code>
 
 
@@ -227,9 +233,9 @@
 
 
     <code>
-      &lt;meta property=&quot;og:title&quot; content=&quot;Verge3D Web Interactive&quot;&gt;
-      &lt;meta property=&quot;og:description&quot; content=&quot;Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.&quot;&gt;
-      &lt;meta property=&quot;og:image&quot; content=&quot;https://cdn.soft8soft.com/images/player_socials.jpg&quot;&gt;
+&lt;meta property=&quot;og:title&quot; content=&quot;Verge3D Web Interactive&quot;&gt;
+&lt;meta property=&quot;og:description&quot; content=&quot;Interactive 3D Web application made with Verge3D. Immerse yourself in amazing graphics experience offered by state-of-the WebGL and HTML5 technologies.&quot;&gt;
+&lt;meta property=&quot;og:image&quot; content=&quot;https://cdn.soft8soft.com/images/player_socials.jpg&quot;&gt;
     </code>
 
 
