--- a/manual/zh/introduction/Physics-Guide.html
+++ b/manual/zh/introduction/Physics-Guide.html
@@ -15,10 +15,12 @@
 
     <h1>Verge3D物理系统指南</h1>
 
-    <p>Verge3D附带了一个物理引擎，可以让您模拟像真实世界一样的物理特性。这个功能对于创建3D游戏和AR/VR应用特别有用。</p><iframe class="video-480p"
-      src="https://www.youtube.com/embed/RZnFcIXo0Ws" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p></p>
+    <p>Verge3D附带了一个物理引擎，可以让您模拟像真实世界一样的物理特性。这个功能对于创建3D游戏和AR/VR应用特别有用。</p>
+    
+    <iframe class="video-480p"
+      src="https://player.bilibili.com/player.html?aid=45327507&bvid=BV15b411z7ez&cid=79362931&page=1&high_quality=1&danmaku=0" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
 
     <p>我们使用开源的物理引擎Bullet作为物理系统后端,它的web版本被称为 <a href="https://github.com/kripken/ammo.js" target="_blank">ammo.js</a>。
     </p>
@@ -54,7 +56,7 @@
 
     <ul>
       <li>一定要在建模套件中应用比例，因为物理引擎会忽略对象的比例。</li>
-      <li>为了得到最好的结果，对象的原点应该与质心重合。在Blender2.8中，请使用如下方式 <strong>物体 &gt; 设置原点 &gt; 原点到质心（体积）</strong>设置。</li>
+      <li>为了得到最好的结果，对象的原点应该与质心重合。在Blender2.8中，请使用如下方式 <strong>物体 > 设置原点 > 原点到质心（体积）</strong>设置。</li>
       <li>切勿直接对 <em>动态</em> 体直接进行位置和动画设置。作为替代，使用 <a href="manual/zh/puzzles/Physics.html#apply_vector">apply
           vector(应用向量)</a> 执行力/冲量/向量操作，使用 <a href="manual/zh/puzzles/Physics.html#snap_body">snap body(绑定体)</a>
         拼图执行绑定到另一个对象的操作。</li>
@@ -85,14 +87,14 @@
     <p>由于角色需要在地板(+墙壁）或地面上行走，使用相应的*create physics body*拼图来创建这样的体。</p>
 
     <p>
-      下一步是配置摄影机。摄影机不会分配任何物理特征，因为我们只需要它作为&ldquo;眼睛&rdquo;即可。设置*First-Person*控件，但不要分配任何碰撞材质（我们将使用物理引擎提供的全功能碰撞检测，而不是基本的地板/墙壁模拟）。此外，取消选中*Allow
+      下一步是配置摄影机。摄影机不会分配任何物理特征，因为我们只需要它作为“眼睛”即可。设置*First-Person*控件，但不要分配任何碰撞材质（我们将使用物理引擎提供的全功能碰撞检测，而不是基本的地板/墙壁模拟）。此外，取消选中*Allow
       Panning*，并将*Movement Speed*值设置为零：</p><img src="files/physics-guide/firstperson-camera-settings.jpg"
       class="centered" style="max-width: 320px">
     <p>
-      现在需要把摄影机附加在角色的&ldquo;头&rdquo;上了。不需要为头部创建模型，在场景中添加一个名为&ldquo;Head&rdquo;的空对象，并将其设置为胶囊模型的上部的子物体。这样&ldquo;Head&rdquo;就会随着角色移动。
+      现在需要把摄影机附加在角色的“头”上了。不需要为头部创建模型，在场景中添加一个名为“Head”的空对象，并将其设置为胶囊模型的上部的子物体。这样“Head”就会随着角色移动。
     </p>
 
-    <p>通过使用附加的&ldquo;Head&rdquo;对象，您可以在运行时将摄影机与角色连接或分离。若要连接摄影机，请使用 <a
+    <p>通过使用附加的“Head”对象，您可以在运行时将摄影机与角色连接或分离。若要连接摄影机，请使用 <a
         href="manual/zh/puzzles/Objects.html#parent">parent</a> 和 <a
         href="manual/zh/puzzles/Objects.html#snap_to_object">snap to object</a> 拼图：</p><img
       src="files/physics-guide/snap-camera-puzzles.jpg" style="max-width: 560px">
@@ -101,7 +103,7 @@
     <p>角色创建好了！现在是时候让它在场景中移动了。在最基本的情况下，我们需要在用户按下向上箭头键时向前移动。为此，将*linear velocity*矢量应用于角色，该矢量是从摄影机水平方向计算的。要使模拟稳健，应始终使用 <a
         href="manual/zh/puzzles/Physics.html#on_simulation_tick">on simulation link</a> 拼图。</p><img
       src="files/physics-guide/moving-character-puzzles.jpg" style="max-width: 981px">
-    <p>要在移动设备上移动您的角色，您需要额外的&ldquo;controller&rdquo;元素。您可以使用摄影机父级的3D对象创建它们，也可以使用 <a
+    <p>要在移动设备上移动您的角色，您需要额外的“controller”元素。您可以使用摄影机父级的3D对象创建它们，也可以使用 <a
         href="manual/zh/introduction/HTML-based-user-interfaces.html">HTML元素</a>.</p>
 
     <p>若要在VR模式下移动角色，可以使用 <a href="manual/zh/puzzles/AR_VR.html#get_controller_prop">get controller property(获取控制器属性)</a>
