--- a/manual/zh/introduction/Project-Structure.html
+++ b/manual/zh/introduction/Project-Structure.html
@@ -26,7 +26,7 @@
     <p>使用应用管理器初始化的默认项目（使用默认配置参数），包含以下内容。</p><img src="files/project-structure/project-structure-simple.jpg">
     <h3>HTML、CSS和JavaScript文件</h3>
 
-    <p>新建的应用主体，由与应用同名（&ldquo;my_awesome_app&rdquo;）的 <strong>.html</strong>, <strong>.css</strong> 和
+    <p>新建的应用主体，由与应用同名（“my_awesome_app”）的 <strong>.html</strong>, <strong>.css</strong> 和
       <strong>.js</strong> 文件，及Verge3D运行时 <strong>v3d.js</strong>组成。还有一个名为 <strong>media</strong>
       的文件夹，其中包含全屏按钮及一组用于在不同设备上调用的图标图片。</p>
 
