--- a/manual/zh/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/zh/introduction/Puzzles-Visual-Logic-Editor.html
@@ -107,7 +107,7 @@
 
     <h2>选项卡</h2>
 
-    <p>你可以在选项卡中重新排列拼图的顺序，以使其更易于管理和响应。要创建新的选项卡，请点击顶部栏中的&ldquo;加号&rdquo;按钮，并为此选项卡命名。</p><img
+    <p>你可以在选项卡中重新排列拼图的顺序，以使其更易于管理和响应。要创建新的选项卡，请点击顶部栏中的“加号”按钮，并为此选项卡命名。</p><img
       src="files/puzzles-editor/tabs-create.jpg" class="centered" style="max-width: 600px">
     <p>现在您可以在此选项卡内添加拼图了。如需移动一些拼图到另一个选项卡，请使用剪切 *Ctrl-X* 和 粘贴 *Ctrl-V*
       快捷键。所有的选项卡都会共享同一个命名空间，所以您可以在一个选项卡中定义过程变量，在另一个选项卡中调用。</p>
@@ -128,7 +128,7 @@
 
     <h3>Duplicate</h3>
 
-    <p>创建一组拼图的副本。您还可以使用&ldquo;复制/粘贴&rdquo;快捷键*Ctrl-C*/*Ctrl-V*执行同样的操作。</p><img
+    <p>创建一组拼图的副本。您还可以使用“复制/粘贴”快捷键*Ctrl-C*/*Ctrl-V*执行同样的操作。</p><img
       src="files/puzzles-editor/puzzles-editor-right-click-menu-duplicate.jpg" class="centered"
       style="max-width: 496px">
     <h3>Add Comment / Remove Comment</h3>
@@ -136,7 +136,7 @@
     <p>为拼图添加注释。通过单击拼图左上角的问号按钮显示和关闭注释，点击后展开对应的注释文本窗口。注释可以在开启和关闭的状态下存储。</p><img
       src="files/puzzles-editor/puzzles-editor-right-click-menu-add-comment.jpg" class="centered"
       style="max-width: 1000px">
-    <p>可以通过在右键菜单中选择&ldquo;Remove Comment&rdquo;来移除注释。</p><img
+    <p>可以通过在右键菜单中选择“Remove Comment”来移除注释。</p><img
       src="files/puzzles-editor/puzzles-editor-right-click-menu-remove-comment.jpg" class="centered"
       style="max-width: 430px">
     <h3>Inline Inputs / External Inputs</h3>
