--- a/manual/zh/introduction/Testing-Mobile-Browsers.html
+++ b/manual/zh/introduction/Testing-Mobile-Browsers.html
@@ -21,7 +21,7 @@
 
     <h2>方法1：本地IP地址</h2>
 
-    <p>点击应用管理器左侧的齿轮图标，在其设置中<b>启用外部服务器</b>*(Enable external server interface)*选项&rdquo;：</p><img
+    <p>点击应用管理器左侧的齿轮图标，在其设置中<b>启用外部服务器</b>*(Enable external server interface)*选项”：</p><img
       src="files/testing-mobile-browsers/app-manager-settings-external-server-interface.jpg" class="centered"
       style="max-width: 676px">
     <p>再次打开应用管理器设置，应该会显示<b>本地网络地址</b> *(Local network address)* 信息了。</p>
@@ -59,13 +59,13 @@
 
     <p>因为AR/VR应用需要在浏览器中为服务器启用安全连接（https），而localhosthost地址则无此限制，此时方法3比1和2更适用。此外，使用这一方法还可以看到移动浏览器中的控制台输出。</p>
 
-    <p>在Android设备上，转到 <strong>设置&gt;开发者选项</strong> 并启用<b>USB调试</b>。</p>
+    <p>在Android设备上，转到 <strong>设置 > 开发者选项</strong> 并启用<b>USB调试</b>。</p>
 
     <p class="note">默认情况下，Android设备中的开发者选项是隐藏的。您可以在设置菜单中找到系统内部版本号，并连续点击，即可解锁开发者选项。</p><img
       src="files/testing-mobile-browsers/android-developer-options.jpg" class="centered" style="max-width: 360px">
     <p>用USB线连接您的Android设备。在计算机上的Chrome浏览器中，导航到 <i>chrome://inspect</i>。</p><img
       src="files/testing-mobile-browsers/chrome-inspect.jpg" class="centered" style="max-width: 670px">
-    <p>此时在您的Android设备上将弹出一个对话框&mdash;&mdash;如果没有，重新加载 <i>chrome:i//nspect</i> 或者重新插入USB连接线。在弹出窗口中，点击OK以允许USB调试。</p><img
+    <p>此时在您的Android设备上将弹出一个对话框——如果没有，重新加载 <i>chrome:i//nspect</i> 或者重新插入USB连接线。在弹出窗口中，点击OK以允许USB调试。</p><img
       src="files/testing-mobile-browsers/android-usb-debugging.jpg" class="centered" style="max-width: 360px">
     <p>您现在应该可以在 <i>chrome://inspect</i> 页面看到Android设备了。同样，如果您在移动设备上打开了Chrome，也会在那里列出。</p><img
       src="files/testing-mobile-browsers/chrome-inspect2.jpg" class="centered" style="max-width: 670px">
@@ -82,7 +82,6 @@
     <h2>遇到问题？</h2>
 
     <p>欢迎您随时在 <a href="https://www.soft8soft.com/forums/" target="_blank">论坛</a>上提问！您还可以加入中文用户社区<a href="https://shang.qq.com/wpa/qunwpa?idkey=c31cf6597f3ed7ce68bd47aba6bba23049bf973ac6acc59b0a5a7d1bd933b3ea" target="_blank">QQ群(171678760)</a>，在线寻求帮助。</p>
-
 
   </article>
 </body>
