--- a/manual/zh/introduction/Text-Rendering.html
+++ b/manual/zh/introduction/Text-Rendering.html
@@ -52,7 +52,7 @@
 
     <h2>2.动态文本几何</h2>
     <p>
-      您可以使用建模套件中的文本对象来创建类似于规则网格的文本几何图形。&ldquo;动态&rdquo;意味着Verge3D不在导出的glTF资产中存储文本几何图形数据，而是在场景加载时（使用字体数据）重新创建文本。这还意味着，您可以在运行时中使用
+      您可以使用建模套件中的文本对象来创建类似于规则网格的文本几何图形。“动态”意味着Verge3D不在导出的glTF资产中存储文本几何图形数据，而是在场景加载时（使用字体数据）重新创建文本。这还意味着，您可以在运行时中使用
       <a href="manual/zh/puzzles/Objects.html#update_text_object">update text object(更新文本对象)</a> 拼图或使用JavaScript实时编辑文字。
     </p>
 
