--- a/manual/zh/introduction/Updating.html
+++ b/manual/zh/introduction/Updating.html
@@ -21,7 +21,7 @@
 
     <h2>升级Verge3D安装包</h2>
 
-    <p>通过重命名来备份当前的Verge3D文件夹（例如，将&ldquo;verge3d&rdquo;重命名为&ldquo;verge3d_old&rdquo;）。</p>
+    <p>通过重命名来备份当前的Verge3D文件夹（例如，将“verge3d”重命名为“verge3d_old”）。</p>
 
     <p>下载并解压Verge3D最新版软件包到一个新的同名文件夹中（即Verge3D）。</p><img src="files/updating/files-backup.jpg" class="centered"
       style="max-width: 1000px">
@@ -79,7 +79,7 @@
 
     <h2>已知问题及故障排除方法</h2>
 
-    <p>在极少数情况下，应用的&ldquo;拼图&rdquo;按钮会在应用管理器中消失。请执行清洁更新以修复此问题。</p>
+    <p>在极少数情况下，应用的“拼图”按钮会在应用管理器中消失。请执行清洁更新以修复此问题。</p>
 
     <p>在极少数情况下，拼图编辑器在更新后可能无法加载。请重置浏览器设置以修复此问题。请重置浏览器设置以修复此问题。</p>
 
