--- a/manual/zh/introduction/Workflow.html
+++ b/manual/zh/introduction/Workflow.html
@@ -31,9 +31,9 @@
 
     <h2>建模与烘焙</h2>
 
-    <p>在我们的团队中，我们实践了以下建模流程。首先，创建高面模型。下一步，通过简单地移除suburf修改器或重新拓扑（retopology）获得低面到中等面模型。建议单个模型不超过10万三角面片。</p><img
+    <p>在我们的团队中，我们实践了以下建模流程。首先，创建高面模型。下一步，通过简单地移除表面细分修改器或重新拓扑（retopology）获得低面到中等面模型。建议单个模型不超过10万三角面片。</p><img
       src="files/workflow/teapot-modeling.jpg" class="centered" style="max-width: 819px;">
-    <p>然后对低面模型进行展UV操作。最终模型网格是三角形的&mdash;&mdash;这并不是Verge3D的要求，但更适用于烘焙贴图。此外，三角面模型更适合加载到第三方编辑器，比如Substance Painter。</p>
+    <p>然后对低面模型进行展UV操作。最终模型网格是三角形的——这并不是Verge3D的要求，但更适用于烘焙贴图。此外，三角面模型更适合加载到第三方编辑器，比如Substance Painter。</p>
 
     <p>根据需要，可以使用叠加的高模和低模来进行烘焙法线和AO贴图。</p>
 
@@ -55,12 +55,22 @@
         href="manual/zh/max/GLTF-Materials.html">3ds Max</a>和 <a
         href="manual/zh/maya/GLTF-Materials.html">Maya</a>的相关设置）。</p>
 
-    <p>您可以参考以下视频中的解释，了解如何使用基于物理的材质：Youtube：<a href="https://youtu.be/symQy5gEHdY" target="_blank">Blender</a>, <a
-        href="https://www.youtube.com/watch?v=s_QjxCr8I6k" target="_blank">3ds Max</a>, <a
-        href="https://www.youtube.com/watch?v=9BzE98XIOnI">Maya</a>.
-      Bilibili: [link:https://www.bilibili.com/video/BV1ob411e7KC?p=3 Blender] ,
-      [link:https://www.bilibili.com/video/BV144411R7GS?p=2 3ds Max],
-      [link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=3 Maya].</p>
+    <p>您可以参考以下视频中的解释，了解如何使用基于物理的材质：
+      <ul>
+        <li>
+          Youtube: 
+          <a href="https://youtu.be/symQy5gEHdY" target="_blank">Blender</a>, 
+          <a href="https://www.youtube.com/watch?v=s_QjxCr8I6k" target="_blank">3ds Max</a>, 
+          <a href="https://www.youtube.com/watch?v=9BzE98XIOnI">Maya</a>.
+        </li>
+       <li>
+         Bilibili: 
+         <a href="https://www.bilibili.com/video/BV1ob411e7KC?p=3">Blender</a>, 
+         <a href="https://www.bilibili.com/video/BV144411R7GS?p=2">3ds Max</a>, 
+         <a href="https://www.bilibili.com/video/BV1WT4y1u7pT?p=3">Maya</a>.
+        </li>
+      </ul>
+    </p>
 
     [anchor:Image_Formats_and_Resolution]
 
@@ -97,14 +107,11 @@
 
     <h3>在RGBA中打包B/W信息</h3>
 
-    <p>如果您有多个黑白图像（AO，光照贴图，透明蒙版，颜色蒙版等），请考虑将它们 <a
-        href="manual/zh/introduction/Optimizing-WebGL-performance.html#Texturing">打包</a> 在单个纹理的RGBA通道中。</p>
+    <p>如果您有多个黑白图像（AO，光照贴图，透明蒙版，颜色蒙版等），请考虑将它们 <a href="manual/zh/introduction/Optimizing-WebGL-performance.html#Texturing">打包</a> 在单个纹理的RGBA通道中。</p>
 
     <h3>按需加载</h3>
 
-    <p>如果您正在开发定制器或类似的应用，您可以考虑在启动时仅加载一组有限的纹理。可使用 <a href="manual/zh/puzzles/Materials.html#replace_texture">replace
-        texture（替换纹理）</a> 拼图，在需求的基础上加载其他纹理并将其应用于模型。另一种方法是用 <a href="manual/zh/puzzles/Scenes.html#append_scene">append
-        scene(追加场景)</a> 拼图来动态地加载场景部分。</p>
+    <p>如果您正在开发定制器或类似的应用，您可以考虑在启动时仅加载一组有限的纹理。可使用 <a href="manual/zh/puzzles/Materials.html#replace_texture">replace texture（替换纹理）</a> 拼图，在需求的基础上加载其他纹理并将其应用于模型。另一种方法是用 <a href="manual/zh/puzzles/Scenes.html#append_scene">append scene(追加场景)</a> 拼图来动态地加载场景部分。</p>
 
     [anchor:Environment_Map]
 
@@ -116,19 +123,29 @@
 
     <p>Blender版、Max版和Maya版的官方案例Cube中都包含了名为 <i>Environment.hdr</i> 的HDR纹理，您可将其用于其他应用。</p>
 
-    <p>您可以观看以下视频了解如何为基于物理材质的工作流程设置HDR环境：Youtube：<a href="https://youtu.be/symQy5gEHdY" target="_blank">Blender</a>, <a
+    <p>您可以观看以下视频了解如何为基于物理材质的工作流程设置HDR环境：
+      <ul>
+        <li>
+          Youtube: 
+          <a href="https://youtu.be/symQy5gEHdY" target="_blank">Blender</a>, <a
         href="https://www.youtube.com/watch?v=s_QjxCr8I6k" target="_blank">3ds Max</a>, <a
         href="https://www.youtube.com/watch?v=9BzE98XIOnI">Maya</a>.
-      Bilibili: [link:https://www.bilibili.com/video/BV1ob411e7KC?p=3 Blender] ,
-      [link:https://www.bilibili.com/video/BV144411R7GS?p=2 3ds Max],
-      [link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=3 Maya].</p>
+        </li>
+        <li>
+          Bilibili: 
+          <a href="https://www.bilibili.com/video/BV1ob411e7KC?p=3">Blender</a>,
+          <a href="https://www.bilibili.com/video/BV144411R7GS?p=2">3ds Max</a>,
+          <a href="https://www.bilibili.com/video/BV1WT4y1u7pT?p=3">Maya</a>.
+        </li>
+      </ul>
+      </p>
 
     [anchor:HDR_Rendering]
 
     <h2>HDR渲染</h2>
 
-    <p>在3ds Max和Maya的Verge3D导出设置窗口或Blender的渲染选项卡中设置中，选中&ldquo;Verge3D
-      Settings&rdquo;面板上相应的复选框，即可启用HDR（高动态范围成像）渲染管线。在此模式下，引擎使用半精度浮点纹理以实现更高精度和强度范围，这对正确渲染 <a
+    <p>在3ds Max和Maya的Verge3D导出设置窗口或Blender的渲染选项卡中设置中，选中“Verge3D
+      Settings”面板上相应的复选框，即可启用HDR（高动态范围成像）渲染管线。在此模式下，引擎使用半精度浮点纹理以实现更高精度和强度范围，这对正确渲染 <a
         href="manual/zh/puzzles/Postprocessing.html#bloom">辉光后期特效（Bloom post-process effect）</a>尤为重要。</p><img
       src="files/workflow/scooter-bloom.jpg" class="centered" style="max-width: 919px;">
 
@@ -141,19 +158,29 @@
       src="files/workflow/animation.png" class="centered" style="max-width: 819px;">
     <p>建议您使用更易读易懂的名称来命名动画对象，一边在 <a href="manual/zh/puzzles/Animation.html">拼图编辑器（Puzzles editor）</a>的动画对象中更容易找到它们。</p>
     <img src="files/workflow/advanced_animation_puzzle.jpg" class="centered" style="max-width: 819px;">
-    <p>请观看以下视频，了解如何创建动画：Youtube: <a href="https://youtu.be/VkjEfSmI2xM" target="_blank">Blender</a>, <a
-        href="https://www.youtube.com/watch?v=0dskMLdNpJ4" target="_blank">3ds Max</a>,
-      [link:https://www.youtube.com/watch?v=_kwsXR2Qoxo Maya].
-      Bilibili: [link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=7 Blender] ,
-      [link:https://www.bilibili.com/video/BV144411R7GS?p=4 3ds Max],
-      [link:https://www.bilibili.com/video/BV1eA411i79T?p=7 Maya].</p>
+    <p>请观看以下视频，了解如何创建动画：
+      <ul>
+        <li>
+          YouTube:
+          <a href="https://youtu.be/VkjEfSmI2xM" target="_blank">Blender</a>,
+          <a href="https://www.youtube.com/watch?v=0dskMLdNpJ4" target="_blank">3ds Max</a>,
+          <a href="https://www.youtube.com/watch?v=_kwsXR2Qoxo">Maya</a>  .
+        </li>
+        <li>
+          Bilibili:
+          <a href="https://www.bilibili.com/video/BV1WT4y1u7pT?p=7">Blender</a>,
+          <a href="https://www.bilibili.com/video/BV144411R7GS?p=4">3ds Max</a>,
+          <a href="https://www.bilibili.com/video/BV1eA411i79T?p=7">Maya</a>.
+        </li>
+      </ul> 
+      </p>
 
     [anchor:Layout_and_UI]
 
     <h2>布局和用户界面</h2>
 
     <p>在我们的无代码工作流中，基于HTML的界面是使用外部web设计软件构建的。任何能够导出HTML / CSS / JS文件的可视化编辑器都可以用来创建界面。例如， <a
-        href="https://webflow.grsm.io/3441118" target="_blank">Webflow</a> 是我们用来创建Scooter， Farmer&apos;s
+        href="https://webflow.grsm.io/3441118" target="_blank">Webflow</a> 是我们用来创建Scooter， Farmer's
       Journey及Industrial Robot案例的工具。当然，您可以使用代码或使用其他一些工具手动构建HTML界面。</p><img src="files/workflow/webflow-project.jpg"
       class="centered" style="max-width: 819px;">
     <p>用于嵌入Verge3D应用的单独网页，包含了菜单，按钮，信息框等界面元素。有关更多详细信息和示例，请参阅有关 <a
@@ -187,17 +214,24 @@
 
     <p>当您完成应用创作时，可以按照本手册<a href="manual/zh/introduction/Asset-compression.html">资产压缩</a>章节来优化场景文件的加载。</p>
 
-    <p>观看以下视频了解如何为你的应用启用资产压缩：<br>*YouTube*: <br>
+    <p>观看以下视频了解如何为你的应用启用资产压缩：<br>
+      <ul>
+        <li>
+      *YouTube*: <br>
       <a href="https://youtu.be/yYOyUwRveAU" target="_blank">Verge3D for Blender Basics - Part 11 - Application
         Optimizations</a><br>
       <a href="https://www.youtube.com/watch?v=2WHsmOohNy8" target="_blank">Verge3D for 3ds Max Basics - Part 9 -
         Optimizing for Faster Loading</a><br>
       <a href="https://youtu.be/NfynjpynifI" target="_blank">Verge3D for Maya Basics - Part 11 - Application
         Optimizations</a><br>
+      </li>
+      <li>
       *Bilibili*: <br>
-      [link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=11 Verge3D for Blender入门教程 - 11.应用优化]<br>
-      [link:https://www.bilibili.com/video/BV144411R7GS?p=9 Verge3D for 3ds Max基础教程 - 09.快速加载优化]<br>
-      [link:https://www.bilibili.com/video/BV1eA411i79T?p=11 Verge3D for Maya入门教程 - 11.应用优化]<br>
+      <a href="https://www.bilibili.com/video/BV1WT4y1u7pT?p=11">Verge3D for Blender入门教程 - 11.应用优化</a><br>
+      <a href="https://www.bilibili.com/video/BV144411R7GS?p=9">Verge3D for 3ds Max基础教程 - 09.快速加载优化</a><br>
+      <a href="https://www.bilibili.com/video/BV1eA411i79T?p=11">Verge3D for Maya入门教程 - 11.应用优化</a><br>
+    </li>
+    </ul>
     </p>
 
     [anchor:Publishing]
